--- a/core/resources/src/main/res/values-ar/strings.xml
+++ b/core/resources/src/main/res/values-ar/strings.xml
@@ -2067,4 +2067,28 @@
     <string name="suffix_pattern_description">نص مخصص يتم وضعه في نهاية اسم الملف، وهو مفيد لإصدارات مثل _v2، أو _edited، أو _final.</string>
     <string name="extension_pattern_description">امتداد الملف (png، jpg، webp، وما إلى ذلك)، يطابق تلقائيًا التنسيق الفعلي المحفوظ.</string>
     <string name="formatted_timestamp_pattern_description">طابع زمني قابل للتخصيص يتيح لك تحديد التنسيق الخاص بك من خلال مواصفات جافا للفرز المثالي.</string>
+    <string name="fling_type">نوع القذف</string>
+    <string name="android_native">الروبوت الأصلي</string>
+    <string name="ios_style">نمط دائرة الرقابة الداخلية</string>
+    <string name="smooth_curve">منحنى سلس</string>
+    <string name="quick_stop">توقف سريع</string>
+    <string name="bouncy">نطاط</string>
+    <string name="floaty">عائم</string>
+    <string name="snappy">لاذع</string>
+    <string name="ultra_smooth">فائق النعومة</string>
+    <string name="adaptive">التكيف</string>
+    <string name="accessibility_aware">علم إمكانية الوصول</string>
+    <string name="reduced_motion">انخفاض الحركة</string>
+    <string name="android_native_sub">فيزياء التمرير الأصلية لنظام Android لمقارنة خط الأساس</string>
+    <string name="smooth_sub">التمرير المتوازن والسلس للاستخدام العام</string>
+    <string name="ios_style_sub">سلوك تمرير عالي الاحتكاك يشبه نظام iOS</string>
+    <string name="smooth_curve_sub">منحنى فريد من نوعه لإحساس التمرير المميز</string>
+    <string name="quick_stop_sub">التمرير الدقيق مع التوقف السريع</string>
+    <string name="bouncy_sub">تمريرة نطاطة مرحة وسريعة الاستجابة</string>
+    <string name="floaty_sub">مخطوطات طويلة ومزلقة لتصفح المحتوى</string>
+    <string name="snappy_sub">تمرير سريع وسريع الاستجابة لواجهات المستخدم التفاعلية</string>
+    <string name="ultra_smooth_sub">تمرير سلس ممتاز مع زخم ممتد</string>
+    <string name="adaptive_sub">يضبط الفيزياء على أساس سرعة القذف</string>
+    <string name="accessibility_aware_sub">يحترم إعدادات إمكانية الوصول إلى النظام</string>
+    <string name="reduced_motion_sub">الحد الأدنى من الحركة لتلبية احتياجات الوصول</string>
 </resources>
