--- a/core/resources/src/main/res/values-be/strings.xml
+++ b/core/resources/src/main/res/values-be/strings.xml
@@ -2065,4 +2065,28 @@
     <string name="suffix_pattern_description">Нестандартны тэкст, размешчаны ў канцы імя файла, карысны для кіравання версіямі, такімі як _v2, _edited або _final.</string>
     <string name="extension_pattern_description">Пашырэнне файла (png, jpg, webp і г.д.), якое аўтаматычна адпавядае фактычнаму захаванаму фармату.</string>
     <string name="formatted_timestamp_pattern_description">Наладжвальная пазнака часу, якая дазваляе вам вызначаць уласны фармат па спецыфікацыі Java для ідэальнага сартавання.</string>
+    <string name="fling_type">Тып кідка</string>
+    <string name="android_native">Android Native</string>
+    <string name="ios_style">Стыль iOS</string>
+    <string name="smooth_curve">Плаўная крывая</string>
+    <string name="quick_stop">Хуткая прыпынак</string>
+    <string name="bouncy">Бадзёры</string>
+    <string name="floaty">Плывучы</string>
+    <string name="snappy">Імклівы</string>
+    <string name="ultra_smooth">Ультрагладкая</string>
+    <string name="adaptive">Адаптыўны</string>
+    <string name="accessibility_aware">Даступнасць Aware</string>
+    <string name="reduced_motion">Зніжэнне руху</string>
+    <string name="android_native_sub">Родная фізіка пракруткі Android</string>
+    <string name="smooth_sub">Збалансаваная плыўная пракрутка для агульнага карыстання</string>
+    <string name="ios_style_sub">Паводзіны пракруткі, падобныя на iOS, з большым трэннем</string>
+    <string name="smooth_curve_sub">Унікальная сплайн-крывая для выразнага адчування пракруткі</string>
+    <string name="quick_stop_sub">Дакладная пракрутка з хуткай прыпынкам</string>
+    <string name="bouncy_sub">Гуллівы, спагадны пругкі скрутак</string>
+    <string name="floaty_sub">Доўгія слізгальныя скруткі для прагляду кантэнту</string>
+    <string name="snappy_sub">Хуткая і адаптыўная пракрутка для інтэрактыўных інтэрфейсаў</string>
+    <string name="ultra_smooth_sub">Прэміяльная плаўная пракрутка з пашыраным імпульсам</string>
+    <string name="adaptive_sub">Рэгулюе фізіку ў залежнасці ад хуткасці кідка</string>
+    <string name="accessibility_aware_sub">Паважае налады даступнасці сістэмы</string>
+    <string name="reduced_motion_sub">Мінімальны рух для патрэб даступнасці</string>
 </resources>
