--- a/core/resources/src/main/res/values-bn/strings.xml
+++ b/core/resources/src/main/res/values-bn/strings.xml
@@ -2063,4 +2063,28 @@
     <string name="suffix_pattern_description">ফাইলের নামের শেষে কাস্টম টেক্সট রাখা, _v2, _edited বা _final-এর মত সংস্করণের জন্য উপযোগী।</string>
     <string name="extension_pattern_description">ফাইল এক্সটেনশন (png, jpg, webp, ইত্যাদি), স্বয়ংক্রিয়ভাবে প্রকৃত সংরক্ষিত বিন্যাসের সাথে মিলে যায়।</string>
     <string name="formatted_timestamp_pattern_description">একটি কাস্টমাইজযোগ্য টাইমস্ট্যাম্প যা আপনাকে নিখুঁত সাজানোর জন্য জাভা স্পেসিফিকেশন দ্বারা আপনার নিজস্ব বিন্যাস সংজ্ঞায়িত করতে দেয়।</string>
+    <string name="fling_type">ফ্লিং টাইপ</string>
+    <string name="android_native">অ্যান্ড্রয়েড নেটিভ</string>
+    <string name="ios_style">iOS স্টাইল</string>
+    <string name="smooth_curve">মসৃণ বক্ররেখা</string>
+    <string name="quick_stop">কুইক স্টপ</string>
+    <string name="bouncy">বাউন্সি</string>
+    <string name="floaty">ভাসমান</string>
+    <string name="snappy">চটপটি</string>
+    <string name="ultra_smooth">আল্ট্রা মসৃণ</string>
+    <string name="adaptive">অভিযোজিত</string>
+    <string name="accessibility_aware">অ্যাক্সেসিবিলিটি সচেতন</string>
+    <string name="reduced_motion">গতি কমানো</string>
+    <string name="android_native_sub">বেসলাইন তুলনার জন্য নেটিভ অ্যান্ড্রয়েড স্ক্রোল ফিজিক্স</string>
+    <string name="smooth_sub">সাধারণ ব্যবহারের জন্য সুষম, মসৃণ স্ক্রলিং</string>
+    <string name="ios_style_sub">উচ্চ ঘর্ষণ iOS-এর মতো স্ক্রোল আচরণ</string>
+    <string name="smooth_curve_sub">স্বতন্ত্র স্ক্রোল অনুভূতির জন্য অনন্য স্প্লাইন বক্ররেখা</string>
+    <string name="quick_stop_sub">দ্রুত স্টপিংয়ের সাথে সুনির্দিষ্ট স্ক্রলিং</string>
+    <string name="bouncy_sub">কৌতুকপূর্ণ, প্রতিক্রিয়াশীল বাউন্সি স্ক্রোল</string>
+    <string name="floaty_sub">কন্টেন্ট ব্রাউজিং এর জন্য লম্বা, গ্লাইডিং স্ক্রল</string>
+    <string name="snappy_sub">ইন্টারেক্টিভ UI এর জন্য দ্রুত, প্রতিক্রিয়াশীল স্ক্রলিং</string>
+    <string name="ultra_smooth_sub">বর্ধিত ভরবেগ সহ প্রিমিয়াম মসৃণ স্ক্রলিং</string>
+    <string name="adaptive_sub">ফ্লিং বেগের উপর ভিত্তি করে পদার্থবিদ্যা সামঞ্জস্য করে</string>
+    <string name="accessibility_aware_sub">সিস্টেম অ্যাক্সেসিবিলিটি সেটিংসকে সম্মান করে</string>
+    <string name="reduced_motion_sub">অ্যাক্সেসযোগ্যতার প্রয়োজনের জন্য ন্যূনতম গতি</string>
 </resources>
