--- a/core/resources/src/main/res/values-ca/strings.xml
+++ b/core/resources/src/main/res/values-ca/strings.xml
@@ -2063,4 +2063,28 @@
     <string name="suffix_pattern_description">Text personalitzat situat al final del nom del fitxer, útil per a versions com _v2, _edited o _final.</string>
     <string name="extension_pattern_description">L\'extensió del fitxer (png, jpg, webp, etc.), que coincideix automàticament amb el format desat real.</string>
     <string name="formatted_timestamp_pattern_description">Una marca de temps personalitzable que us permet definir el vostre propi format mitjançant l\'especificació de Java per a una ordenació perfecta.</string>
+    <string name="fling_type">Tipus Fling</string>
+    <string name="android_native">Natiu d\'Android</string>
+    <string name="ios_style">Estil iOS</string>
+    <string name="smooth_curve">Corba suau</string>
+    <string name="quick_stop">Parada ràpida</string>
+    <string name="bouncy">Rebot</string>
+    <string name="floaty">Flotant</string>
+    <string name="snappy">Snappy</string>
+    <string name="ultra_smooth">Ultra suau</string>
+    <string name="adaptive">Adaptatiu</string>
+    <string name="accessibility_aware">Conscient de l\'accessibilitat</string>
+    <string name="reduced_motion">Moviment reduït</string>
+    <string name="android_native_sub">Física de desplaçament nativa d\'Android</string>
+    <string name="smooth_sub">Desplaçament suau i equilibrat per a ús general</string>
+    <string name="ios_style_sub">Comportament de desplaçament semblant a iOS de major fricció</string>
+    <string name="smooth_curve_sub">Corba spline única per a una sensació de desplaçament diferent</string>
+    <string name="quick_stop_sub">Desplaçament precís amb parada ràpida</string>
+    <string name="bouncy_sub">Desplaçament inflable lúdic i sensible</string>
+    <string name="floaty_sub">Desplaçaments llargs i lliscants per a la navegació de contingut</string>
+    <string name="snappy_sub">Desplaçament ràpid i sensible per a interfícies d\'usuari interactives</string>
+    <string name="ultra_smooth_sub">Desplaçament suau premium amb impuls estès</string>
+    <string name="adaptive_sub">Ajusta la física en funció de la velocitat de llançament</string>
+    <string name="accessibility_aware_sub">Respecta la configuració d\'accessibilitat del sistema</string>
+    <string name="reduced_motion_sub">Moviment mínim per a necessitats d\'accessibilitat</string>
 </resources>
