--- a/core/resources/src/main/res/values-cs/strings.xml
+++ b/core/resources/src/main/res/values-cs/strings.xml
@@ -2065,4 +2065,28 @@
     <string name="suffix_pattern_description">Vlastní text umístěný na konci názvu souboru, užitečný pro verzování jako _v2, _edited nebo _final.</string>
     <string name="extension_pattern_description">Přípona souboru (png, jpg, webp atd.), automaticky odpovídající skutečně uloženému formátu.</string>
     <string name="formatted_timestamp_pattern_description">Přizpůsobitelné časové razítko, které vám umožní definovat svůj vlastní formát pomocí specifikace Java pro dokonalé třídění.</string>
+    <string name="fling_type">Typ Fling</string>
+    <string name="android_native">Android Nativní</string>
+    <string name="ios_style">Styl iOS</string>
+    <string name="smooth_curve">Hladká křivka</string>
+    <string name="quick_stop">Rychlé zastavení</string>
+    <string name="bouncy">Skákající</string>
+    <string name="floaty">Plovoucí</string>
+    <string name="snappy">Elegantní</string>
+    <string name="ultra_smooth">Ultra hladký</string>
+    <string name="adaptive">Adaptivní</string>
+    <string name="accessibility_aware">Přístupnost Aware</string>
+    <string name="reduced_motion">Snížený pohyb</string>
+    <string name="android_native_sub">Nativní fyzika rolování pro Android</string>
+    <string name="smooth_sub">Vyvážené, plynulé rolování pro všeobecné použití</string>
+    <string name="ios_style_sub">Chování posouvání jako u iOS s vyšším třením</string>
+    <string name="smooth_curve_sub">Unikátní spline křivka pro zřetelný pocit rolování</string>
+    <string name="quick_stop_sub">Přesné rolování s rychlým zastavením</string>
+    <string name="bouncy_sub">Hravý, citlivý skákací svitek</string>
+    <string name="floaty_sub">Dlouhé, klouzavé svitky pro procházení obsahu</string>
+    <string name="snappy_sub">Rychlé a citlivé posouvání pro interaktivní uživatelská rozhraní</string>
+    <string name="ultra_smooth_sub">Prémiové plynulé rolování s prodlouženou hybností</string>
+    <string name="adaptive_sub">Upravuje fyziku na základě rychlosti letu</string>
+    <string name="accessibility_aware_sub">Respektuje nastavení přístupnosti systému</string>
+    <string name="reduced_motion_sub">Minimální pohyb pro potřeby dostupnosti</string>
 </resources>
