--- a/core/resources/src/main/res/values-da/strings.xml
+++ b/core/resources/src/main/res/values-da/strings.xml
@@ -2063,4 +2063,28 @@
     <string name="suffix_pattern_description">Brugerdefineret tekst placeret i slutningen af ​​filnavnet, nyttig til versionering som _v2, _edited eller _final.</string>
     <string name="extension_pattern_description">Filtypenavnet (png, jpg, webp osv.), der automatisk matcher det faktiske gemte format.</string>
     <string name="formatted_timestamp_pattern_description">Et tilpasseligt tidsstempel, der lader dig definere dit eget format efter java-specifikation for perfekt sortering.</string>
+    <string name="fling_type">Fling Type</string>
+    <string name="android_native">Indbygget Android</string>
+    <string name="ios_style">iOS stil</string>
+    <string name="smooth_curve">Glat kurve</string>
+    <string name="quick_stop">Hurtigt stop</string>
+    <string name="bouncy">hoppende</string>
+    <string name="floaty">Flydende</string>
+    <string name="snappy">Snappy</string>
+    <string name="ultra_smooth">Ultra Glat</string>
+    <string name="adaptive">Adaptiv</string>
+    <string name="accessibility_aware">Tilgængelighedsbevidst</string>
+    <string name="reduced_motion">Reduceret bevægelse</string>
+    <string name="android_native_sub">Indbygget Android rullefysik</string>
+    <string name="smooth_sub">Balanceret, jævn rulning til generel brug</string>
+    <string name="ios_style_sub">Højere friktion iOS-lignende rulleadfærd</string>
+    <string name="smooth_curve_sub">Unik splinekurve for tydelig rullefølelse</string>
+    <string name="quick_stop_sub">Præcis rulning med hurtig stop</string>
+    <string name="bouncy_sub">Legesyg, responsiv hoppende rulle</string>
+    <string name="floaty_sub">Lange, glidende ruller til gennemsyn af indhold</string>
+    <string name="snappy_sub">Hurtig, responsiv rulning til interaktive brugergrænseflader</string>
+    <string name="ultra_smooth_sub">Premium jævn rulning med udvidet momentum</string>
+    <string name="adaptive_sub">Justerer fysik baseret på slyngehastighed</string>
+    <string name="accessibility_aware_sub">Respekterer systemtilgængelighedsindstillinger</string>
+    <string name="reduced_motion_sub">Minimal bevægelse for tilgængelighedsbehov</string>
 </resources>
