--- a/core/resources/src/main/res/values-de/strings.xml
+++ b/core/resources/src/main/res/values-de/strings.xml
@@ -2063,4 +2063,28 @@
     <string name="suffix_pattern_description">Benutzerdefinierter Text am Ende des Dateinamens, nützlich für die Versionierung, z. B. _v2, _edited oder _final.</string>
     <string name="extension_pattern_description">Die Dateierweiterung (png, jpg, webp usw.) passt automatisch zum tatsächlich gespeicherten Format.</string>
     <string name="formatted_timestamp_pattern_description">Ein anpassbarer Zeitstempel, mit dem Sie Ihr eigenes Format nach Java-Spezifikation für eine perfekte Sortierung definieren können.</string>
+    <string name="fling_type">Fling-Typ</string>
+    <string name="android_native">Android nativ</string>
+    <string name="ios_style">iOS-Stil</string>
+    <string name="smooth_curve">Glatte Kurve</string>
+    <string name="quick_stop">Schneller Stopp</string>
+    <string name="bouncy">Federnd</string>
+    <string name="floaty">Schwebend</string>
+    <string name="snappy">Bissig</string>
+    <string name="ultra_smooth">Ultra glatt</string>
+    <string name="adaptive">Adaptiv</string>
+    <string name="accessibility_aware">Barrierefreiheit bewusst</string>
+    <string name="reduced_motion">Reduzierte Bewegung</string>
+    <string name="android_native_sub">Native Android-Scroll-Physik zum Basisvergleich</string>
+    <string name="smooth_sub">Ausgewogenes, flüssiges Scrollen für den allgemeinen Gebrauch</string>
+    <string name="ios_style_sub">Höheres Reibungsverhalten beim iOS-ähnlichen Scrollverhalten</string>
+    <string name="smooth_curve_sub">Einzigartige Spline-Kurve für ein ausgeprägtes Scroll-Gefühl</string>
+    <string name="quick_stop_sub">Präzises Scrollen mit schnellem Stoppen</string>
+    <string name="bouncy_sub">Verspielte, reaktionsschnelle, federnde Schriftrolle</string>
+    <string name="floaty_sub">Lange, gleitende Scrolls zum Durchsuchen von Inhalten</string>
+    <string name="snappy_sub">Schnelles, reaktionsschnelles Scrollen für interaktive Benutzeroberflächen</string>
+    <string name="ultra_smooth_sub">Erstklassiges flüssiges Scrollen mit längerem Schwung</string>
+    <string name="adaptive_sub">Passt die Physik basierend auf der Wurfgeschwindigkeit an</string>
+    <string name="accessibility_aware_sub">Berücksichtigt die Barrierefreiheitseinstellungen des Systems</string>
+    <string name="reduced_motion_sub">Minimale Bewegung für Zugänglichkeitsanforderungen</string>
 </resources>
