--- a/core/resources/src/main/res/values-et/strings.xml
+++ b/core/resources/src/main/res/values-et/strings.xml
@@ -2063,4 +2063,28 @@
     <string name="suffix_pattern_description">Failinime lõppu paigutatud kohandatud tekst, mis on kasulik versioonide loomiseks, nagu _v2, _edited või _final.</string>
     <string name="extension_pattern_description">Faililaiend (png, jpg, webp jne), mis vastab automaatselt tegelikule salvestatud vormingule.</string>
     <string name="formatted_timestamp_pattern_description">Kohandatav ajatempel, mis võimaldab teil täiusliku sortimise jaoks määratleda oma vormingu Java spetsifikatsioonide järgi.</string>
+    <string name="fling_type">Paiskamise tüüp</string>
+    <string name="android_native">Androidi algseade</string>
+    <string name="ios_style">iOS-i stiil</string>
+    <string name="smooth_curve">Sujuv kõver</string>
+    <string name="quick_stop">Kiire peatus</string>
+    <string name="bouncy">Kopsakas</string>
+    <string name="floaty">Ujuv</string>
+    <string name="snappy">Kihvt</string>
+    <string name="ultra_smooth">Ultra Smooth</string>
+    <string name="adaptive">Kohanduv</string>
+    <string name="accessibility_aware">Juurdepääsetavus teadlik</string>
+    <string name="reduced_motion">Vähendatud liikumine</string>
+    <string name="android_native_sub">Androidi algse kerimisfüüsika võrdluseks</string>
+    <string name="smooth_sub">Tasakaalustatud, sujuv kerimine üldiseks kasutamiseks</string>
+    <string name="ios_style_sub">Suurem hõõrdumine iOS-i sarnane kerimiskäitumine</string>
+    <string name="smooth_curve_sub">Ainulaadne splainikõver erilise kerimistunde jaoks</string>
+    <string name="quick_stop_sub">Täpne kerimine koos kiire peatamisega</string>
+    <string name="bouncy_sub">Mänguline, tundlik hüppeline kerimisrull</string>
+    <string name="floaty_sub">Pikad libisevad rullid sisu sirvimiseks</string>
+    <string name="snappy_sub">Kiire ja tundlik kerimine interaktiivsete kasutajaliideste jaoks</string>
+    <string name="ultra_smooth_sub">Esmaklassiline sujuv kerimine pikendatud hooga</string>
+    <string name="adaptive_sub">Reguleerib füüsikat paiskamiskiiruse alusel</string>
+    <string name="accessibility_aware_sub">Austab süsteemi juurdepääsetavuse sätteid</string>
+    <string name="reduced_motion_sub">Minimaalne liikumine juurdepääsetavuse vajadustele</string>
 </resources>
