--- a/core/resources/src/main/res/values-eu/strings.xml
+++ b/core/resources/src/main/res/values-eu/strings.xml
@@ -2063,4 +2063,28 @@
     <string name="suffix_pattern_description">Testu pertsonalizatua fitxategi-izenaren amaieran jartzen da, _v2, _edited edo _final bezalako bertsioak egiteko erabilgarria.</string>
     <string name="extension_pattern_description">Fitxategiaren luzapena (png, jpg, webp, etab.), automatikoki gordetako benetako formatuarekin bat datorrena.</string>
     <string name="formatted_timestamp_pattern_description">Denbora-zigilu pertsonalizagarria, zure formatua java zehaztapenen arabera definitzeko aukera ematen dizuna ordenatzeko.</string>
+    <string name="fling_type">Fling mota</string>
+    <string name="android_native">Android natiboa</string>
+    <string name="ios_style">iOS estiloa</string>
+    <string name="smooth_curve">Kurba leuna</string>
+    <string name="quick_stop">Geldialdi azkarra</string>
+    <string name="bouncy">Errebotea</string>
+    <string name="floaty">Flotagarria</string>
+    <string name="snappy">Snappy</string>
+    <string name="ultra_smooth">Ultra leuna</string>
+    <string name="adaptive">Egokigarria</string>
+    <string name="accessibility_aware">Irisgarritasuna jakitun</string>
+    <string name="reduced_motion">Mugimendu murriztua</string>
+    <string name="android_native_sub">Native Android korritze fisika oinarrizko alderaketa egiteko</string>
+    <string name="smooth_sub">Erabilera orokorrerako korritze orekatua eta leuna</string>
+    <string name="ios_style_sub">Marruskadura handiagoa iOS-en antzeko korritze portaera</string>
+    <string name="smooth_curve_sub">Spline kurba berezia korritze sentsazio desberdina lortzeko</string>
+    <string name="quick_stop_sub">Mugimendu zehatza geldialdi bizkorrekin</string>
+    <string name="bouncy_sub">Sroll errebote dibertigarria eta sentikorra</string>
+    <string name="floaty_sub">Edukiak arakatzeko korritu luze eta irristagarriak</string>
+    <string name="snappy_sub">Mugimendu azkarra eta sentikorra interfaze interaktiboetarako</string>
+    <string name="ultra_smooth_sub">Premium mugitze leuna, momentu hedatuarekin</string>
+    <string name="adaptive_sub">Fling abiaduran oinarritutako fisika doitzen du</string>
+    <string name="accessibility_aware_sub">Sistemaren irisgarritasun-ezarpenak errespetatzen ditu</string>
+    <string name="reduced_motion_sub">Irisgarritasun-beharretarako mugimendu minimoa</string>
 </resources>
