--- a/core/resources/src/main/res/values-fa/strings.xml
+++ b/core/resources/src/main/res/values-fa/strings.xml
@@ -2063,4 +2063,28 @@
     <string name="suffix_pattern_description">متن سفارشی قرار داده شده در انتهای نام فایل، مفید برای نسخه سازی مانند _v2، _edited، یا _final.</string>
     <string name="extension_pattern_description">پسوند فایل (png، jpg، webp، و غیره)، به طور خودکار با فرمت ذخیره شده واقعی مطابقت دارد.</string>
     <string name="formatted_timestamp_pattern_description">یک مهر زمانی قابل تنظیم که به شما امکان می دهد قالب خود را با مشخصات جاوا برای مرتب سازی کامل تعریف کنید.</string>
+    <string name="fling_type">نوع پرت کردن</string>
+    <string name="android_native">اندروید بومی</string>
+    <string name="ios_style">سبک iOS</string>
+    <string name="smooth_curve">منحنی صاف</string>
+    <string name="quick_stop">توقف سریع</string>
+    <string name="bouncy">فنری</string>
+    <string name="floaty">شناور</string>
+    <string name="snappy">اسنپی</string>
+    <string name="ultra_smooth">فوق العاده صاف</string>
+    <string name="adaptive">تطبیقی</string>
+    <string name="accessibility_aware">آگاهی از دسترسی</string>
+    <string name="reduced_motion">حرکت کاهش یافته</string>
+    <string name="android_native_sub">فیزیک اسکرول اندروید بومی برای مقایسه پایه</string>
+    <string name="smooth_sub">پیمایش متعادل و روان برای استفاده عمومی</string>
+    <string name="ios_style_sub">رفتار پیمایش مانند iOS با اصطکاک بالاتر</string>
+    <string name="smooth_curve_sub">منحنی اسپلاین منحصر به فرد برای حس اسکرول متمایز</string>
+    <string name="quick_stop_sub">پیمایش دقیق با توقف سریع</string>
+    <string name="bouncy_sub">اسکرول فنری بازیگوش و پاسخگو</string>
+    <string name="floaty_sub">طومارهای بلند و سرخورده برای مرور محتوا</string>
+    <string name="snappy_sub">پیمایش سریع و پاسخگو برای رابط های کاربری تعاملی</string>
+    <string name="ultra_smooth_sub">پیمایش صاف ممتاز با حرکت گسترده</string>
+    <string name="adaptive_sub">فیزیک را بر اساس سرعت پرتاب تنظیم می کند</string>
+    <string name="accessibility_aware_sub">به تنظیمات دسترسی سیستم احترام می گذارد</string>
+    <string name="reduced_motion_sub">حداقل حرکت برای نیازهای دسترسی</string>
 </resources>
