--- a/core/resources/src/main/res/values-fi/strings.xml
+++ b/core/resources/src/main/res/values-fi/strings.xml
@@ -2063,4 +2063,28 @@
     <string name="suffix_pattern_description">Muokattu teksti, joka on sijoitettu tiedostonimen loppuun, hyödyllinen versioinnissa, kuten _v2, _edited tai _final.</string>
     <string name="extension_pattern_description">Tiedostotunniste (png, jpg, webp jne.), joka vastaa automaattisesti todellista tallennettua muotoa.</string>
     <string name="formatted_timestamp_pattern_description">Muokattava aikaleima, jonka avulla voit määrittää oman muotosi java-määrityksen avulla täydellisen lajittelun saavuttamiseksi.</string>
+    <string name="fling_type">Fling tyyppi</string>
+    <string name="android_native">Android Native</string>
+    <string name="ios_style">iOS-tyyli</string>
+    <string name="smooth_curve">Tasainen käyrä</string>
+    <string name="quick_stop">Pikapysäytys</string>
+    <string name="bouncy">Pirteä</string>
+    <string name="floaty">Kelluva</string>
+    <string name="snappy">Reipas</string>
+    <string name="ultra_smooth">Ultra Smooth</string>
+    <string name="adaptive">Mukautuva</string>
+    <string name="accessibility_aware">Esteettömyystietoinen</string>
+    <string name="reduced_motion">Alennettu liike</string>
+    <string name="android_native_sub">Alkuperäinen Android-vieritysfysiikka vertailua varten</string>
+    <string name="smooth_sub">Tasapainoinen, tasainen vieritys yleiseen käyttöön</string>
+    <string name="ios_style_sub">Suurempi kitka iOS:n kaltainen vierityskäyttäytyminen</string>
+    <string name="smooth_curve_sub">Ainutlaatuinen spline-käyrä antaa selkeän vieritystuntuman</string>
+    <string name="quick_stop_sub">Tarkka vieritys nopealla pysäytyksellä</string>
+    <string name="bouncy_sub">Leikkisä, reagoiva pomppiva rulla</string>
+    <string name="floaty_sub">Pitkät, liukuvat rullat sisällön selaamiseen</string>
+    <string name="snappy_sub">Nopea, reagoiva vieritys interaktiivisille käyttöliittymille</string>
+    <string name="ultra_smooth_sub">Ensiluokkainen sujuva vieritys pidennetyllä vauhdilla</string>
+    <string name="adaptive_sub">Säätää fysiikkaa heittonopeuden perusteella</string>
+    <string name="accessibility_aware_sub">Kunnioita järjestelmän esteettömyysasetuksia</string>
+    <string name="reduced_motion_sub">Minimaalinen liike esteettömyystarpeisiin</string>
 </resources>
