--- a/core/resources/src/main/res/values-fil/strings.xml
+++ b/core/resources/src/main/res/values-fil/strings.xml
@@ -2063,4 +2063,28 @@
     <string name="suffix_pattern_description">Custom na text na inilagay sa dulo ng filename, kapaki-pakinabang para sa pag-bersyon tulad ng _v2, _edit, o _final.</string>
     <string name="extension_pattern_description">Ang extension ng file (png, jpg, webp, atbp.), ay awtomatikong tumutugma sa aktwal na naka-save na format.</string>
     <string name="formatted_timestamp_pattern_description">Isang nako-customize na timestamp na nagbibigay-daan sa iyong tukuyin ang sarili mong format ayon sa java specification para sa perpektong pag-uuri.</string>
+    <string name="fling_type">Uri ng Fling</string>
+    <string name="android_native">Android Native</string>
+    <string name="ios_style">Istilo ng iOS</string>
+    <string name="smooth_curve">Makinis na Kurba</string>
+    <string name="quick_stop">Mabilis na Huminto</string>
+    <string name="bouncy">Bouncy</string>
+    <string name="floaty">Lutang</string>
+    <string name="snappy">Snappy</string>
+    <string name="ultra_smooth">Napakakinis</string>
+    <string name="adaptive">Adaptive</string>
+    <string name="accessibility_aware">Accessibility Aware</string>
+    <string name="reduced_motion">Nabawasang Paggalaw</string>
+    <string name="android_native_sub">Native Android scroll physics</string>
+    <string name="smooth_sub">Balanse, makinis na pag-scroll para sa pangkalahatang paggamit</string>
+    <string name="ios_style_sub">Mas mataas na friction iOS-like scroll behavior</string>
+    <string name="smooth_curve_sub">Natatanging spline curve para sa kakaibang scroll feel</string>
+    <string name="quick_stop_sub">Tumpak na pag-scroll na may mabilis na paghinto</string>
+    <string name="bouncy_sub">Mapaglaro, tumutugon bouncy scroll</string>
+    <string name="floaty_sub">Mahahaba, gliding scroll para sa pag-browse ng content</string>
+    <string name="snappy_sub">Mabilis, tumutugon na pag-scroll para sa mga interactive na UI</string>
+    <string name="ultra_smooth_sub">Premium na makinis na pag-scroll na may pinahabang momentum</string>
+    <string name="adaptive_sub">Inaayos ang physics batay sa bilis ng fling</string>
+    <string name="accessibility_aware_sub">Iginagalang ang mga setting ng accessibility ng system</string>
+    <string name="reduced_motion_sub">Minimal na paggalaw para sa mga pangangailangan sa accessibility</string>
 </resources>
