--- a/core/resources/src/main/res/values-fr/strings.xml
+++ b/core/resources/src/main/res/values-fr/strings.xml
@@ -2063,4 +2063,28 @@
     <string name="suffix_pattern_description">Texte personnalisé placé à la fin du nom de fichier, utile pour le versioning comme _v2, _edited ou _final.</string>
     <string name="extension_pattern_description">L\'extension du fichier (png, jpg, webp, etc.), correspondant automatiquement au format réellement enregistré.</string>
     <string name="formatted_timestamp_pattern_description">Un horodatage personnalisable qui vous permet de définir votre propre format par spécification Java pour un tri parfait.</string>
+    <string name="fling_type">Type d\'aventure</string>
+    <string name="android_native">Android natif</string>
+    <string name="ios_style">Style iOS</string>
+    <string name="smooth_curve">Courbe douce</string>
+    <string name="quick_stop">Arrêt rapide</string>
+    <string name="bouncy">Gonflable</string>
+    <string name="floaty">Flottant</string>
+    <string name="snappy">Vif</string>
+    <string name="ultra_smooth">Ultra lisse</string>
+    <string name="adaptive">Adaptatif</string>
+    <string name="accessibility_aware">Conscient de l\'accessibilité</string>
+    <string name="reduced_motion">Mouvement réduit</string>
+    <string name="android_native_sub">Physique de défilement Android native pour une comparaison de base</string>
+    <string name="smooth_sub">Défilement équilibré et fluide pour un usage général</string>
+    <string name="ios_style_sub">Comportement de défilement de type iOS à friction plus élevée</string>
+    <string name="smooth_curve_sub">Courbe cannelée unique pour une sensation de défilement distincte</string>
+    <string name="quick_stop_sub">Défilement précis avec arrêt rapide</string>
+    <string name="bouncy_sub">Défilement rebondissant ludique et réactif</string>
+    <string name="floaty_sub">Défilements longs et glissants pour la navigation dans le contenu</string>
+    <string name="snappy_sub">Défilement rapide et réactif pour les interfaces utilisateur interactives</string>
+    <string name="ultra_smooth_sub">Défilement fluide de qualité supérieure avec un élan prolongé</string>
+    <string name="adaptive_sub">Ajuste la physique en fonction de la vitesse de lancement</string>
+    <string name="accessibility_aware_sub">Respecte les paramètres d\'accessibilité du système</string>
+    <string name="reduced_motion_sub">Mouvement minimal pour les besoins d’accessibilité</string>
 </resources>
