--- a/core/resources/src/main/res/values-hi/strings.xml
+++ b/core/resources/src/main/res/values-hi/strings.xml
@@ -2063,4 +2063,28 @@
     <string name="suffix_pattern_description">फ़ाइल नाम के अंत में कस्टम टेक्स्ट रखा गया है, जो _v2, _edited, या _final जैसे संस्करण के लिए उपयोगी है।</string>
     <string name="extension_pattern_description">फ़ाइल एक्सटेंशन (पीएनजी, जेपीजी, वेबपी, आदि), स्वचालित रूप से वास्तविक सहेजे गए प्रारूप से मेल खाता है।</string>
     <string name="formatted_timestamp_pattern_description">एक अनुकूलन योग्य टाइमस्टैम्प जो आपको सही सॉर्टिंग के लिए जावा विनिर्देश द्वारा अपना स्वयं का प्रारूप परिभाषित करने देता है।</string>
+    <string name="fling_type">फ़्लिंग प्रकार</string>
+    <string name="android_native">एंड्रॉइड नेटिव</string>
+    <string name="ios_style">आईओएस स्टाइल</string>
+    <string name="smooth_curve">चिकना वक्र</string>
+    <string name="quick_stop">जल्दी बंद</string>
+    <string name="bouncy">Bouncy</string>
+    <string name="floaty">हलका</string>
+    <string name="snappy">तेज़</string>
+    <string name="ultra_smooth">अत्यंत चिकना</string>
+    <string name="adaptive">अनुकूली</string>
+    <string name="accessibility_aware">अभिगम्यता जागरूक</string>
+    <string name="reduced_motion">कम गति</string>
+    <string name="android_native_sub">बेसलाइन तुलना के लिए मूल एंड्रॉइड स्क्रॉल भौतिकी</string>
+    <string name="smooth_sub">सामान्य उपयोग के लिए संतुलित, सहज स्क्रॉलिंग</string>
+    <string name="ios_style_sub">उच्च घर्षण आईओएस जैसा स्क्रॉल व्यवहार</string>
+    <string name="smooth_curve_sub">विशिष्ट स्क्रॉल अनुभव के लिए अद्वितीय तख़्ता वक्र</string>
+    <string name="quick_stop_sub">त्वरित रोक के साथ सटीक स्क्रॉलिंग</string>
+    <string name="bouncy_sub">चंचल, प्रतिक्रियाशील उछालभरी स्क्रॉल</string>
+    <string name="floaty_sub">सामग्री ब्राउज़िंग के लिए लंबी, फिसलती हुई स्क्रॉल</string>
+    <string name="snappy_sub">इंटरैक्टिव यूआई के लिए त्वरित, प्रतिक्रियाशील स्क्रॉलिंग</string>
+    <string name="ultra_smooth_sub">विस्तारित गति के साथ प्रीमियम सहज स्क्रॉलिंग</string>
+    <string name="adaptive_sub">फ़्लिंग वेग के आधार पर भौतिकी को समायोजित करता है</string>
+    <string name="accessibility_aware_sub">सिस्टम एक्सेसिबिलिटी सेटिंग्स का सम्मान करता है</string>
+    <string name="reduced_motion_sub">पहुंच आवश्यकताओं के लिए न्यूनतम गति</string>
 </resources>
