--- a/core/resources/src/main/res/values-hu/strings.xml
+++ b/core/resources/src/main/res/values-hu/strings.xml
@@ -2063,4 +2063,28 @@
     <string name="suffix_pattern_description">A fájlnév végén elhelyezett egyéni szöveg, amely hasznos a verziószámításhoz, például a _v2, _edited vagy _final.</string>
     <string name="extension_pattern_description">A fájl kiterjesztése (png, jpg, webp stb.), amely automatikusan megfelel a tényleges mentett formátumnak.</string>
     <string name="formatted_timestamp_pattern_description">Egy testreszabható időbélyeg, amely lehetővé teszi, hogy saját formátumot határozzon meg Java specifikációval a tökéletes rendezés érdekében.</string>
+    <string name="fling_type">Fling típus</string>
+    <string name="android_native">Android natív</string>
+    <string name="ios_style">iOS stílus</string>
+    <string name="smooth_curve">Sima görbe</string>
+    <string name="quick_stop">Gyors Stop</string>
+    <string name="bouncy">Ugráló</string>
+    <string name="floaty">Úszó</string>
+    <string name="snappy">Lendületes</string>
+    <string name="ultra_smooth">Ultra Smooth</string>
+    <string name="adaptive">Adaptív</string>
+    <string name="accessibility_aware">Kisegítő lehetőségek tudatában</string>
+    <string name="reduced_motion">Csökkentett mozgás</string>
+    <string name="android_native_sub">Natív Android görgetőfizika az alapvonal összehasonlításához</string>
+    <string name="smooth_sub">Kiegyensúlyozott, sima görgetés általános használatra</string>
+    <string name="ios_style_sub">Nagyobb súrlódású iOS-szerű görgetési viselkedés</string>
+    <string name="smooth_curve_sub">Egyedülálló spline-görbe a határozott görgetéshez</string>
+    <string name="quick_stop_sub">Precíz görgetés gyors leállítással</string>
+    <string name="bouncy_sub">Játékos, érzékeny pattogó tekercs</string>
+    <string name="floaty_sub">Hosszú, csúszó tekercsek a tartalomböngészéshez</string>
+    <string name="snappy_sub">Gyors, érzékeny görgetés az interaktív felhasználói felületekhez</string>
+    <string name="ultra_smooth_sub">Prémium sima görgetés kiterjesztett lendülettel</string>
+    <string name="adaptive_sub">A fizikát a kirepülési sebesség alapján állítja be</string>
+    <string name="accessibility_aware_sub">Tiszteletben tartja a rendszer akadálymentesítési beállításait</string>
+    <string name="reduced_motion_sub">Minimális mozgás a hozzáférhetőségi igényekhez</string>
 </resources>
