--- a/core/resources/src/main/res/values-in/strings.xml
+++ b/core/resources/src/main/res/values-in/strings.xml
@@ -2062,4 +2062,28 @@
     <string name="suffix_pattern_description">Teks khusus ditempatkan di akhir nama file, berguna untuk pembuatan versi seperti _v2, _edited, atau _final.</string>
     <string name="extension_pattern_description">Ekstensi file (png, jpg, webp, dll.), secara otomatis cocok dengan format penyimpanan sebenarnya.</string>
     <string name="formatted_timestamp_pattern_description">Stempel waktu yang dapat disesuaikan yang memungkinkan Anda menentukan format Anda sendiri berdasarkan spesifikasi java untuk penyortiran yang sempurna.</string>
+    <string name="fling_type">Tipe Lemparan</string>
+    <string name="android_native">Android Asli</string>
+    <string name="ios_style">Gaya iOS</string>
+    <string name="smooth_curve">Kurva Halus</string>
+    <string name="quick_stop">Berhenti Cepat</string>
+    <string name="bouncy">Goyang</string>
+    <string name="floaty">Ringan</string>
+    <string name="snappy">Tajam</string>
+    <string name="ultra_smooth">Sangat Halus</string>
+    <string name="adaptive">adaptif</string>
+    <string name="accessibility_aware">Sadar Aksesibilitas</string>
+    <string name="reduced_motion">Gerakan Berkurang</string>
+    <string name="android_native_sub">Fisika gulir Android asli</string>
+    <string name="smooth_sub">Pengguliran yang seimbang dan mulus untuk penggunaan umum</string>
+    <string name="ios_style_sub">Perilaku gulir mirip iOS dengan gesekan lebih tinggi</string>
+    <string name="smooth_curve_sub">Kurva spline yang unik untuk nuansa gulir yang berbeda</string>
+    <string name="quick_stop_sub">Pengguliran yang tepat dengan penghentian cepat</string>
+    <string name="bouncy_sub">Gulir goyang yang menyenangkan dan responsif</string>
+    <string name="floaty_sub">Gulungan yang panjang dan meluncur untuk penelusuran konten</string>
+    <string name="snappy_sub">Pengguliran cepat dan responsif untuk UI interaktif</string>
+    <string name="ultra_smooth_sub">Pengguliran mulus premium dengan momentum yang diperpanjang</string>
+    <string name="adaptive_sub">Menyesuaikan fisika berdasarkan kecepatan lemparan</string>
+    <string name="accessibility_aware_sub">Menghargai pengaturan aksesibilitas sistem</string>
+    <string name="reduced_motion_sub">Gerakan minimal untuk kebutuhan aksesibilitas</string>
 </resources>
