--- a/core/resources/src/main/res/values-it/strings.xml
+++ b/core/resources/src/main/res/values-it/strings.xml
@@ -2063,4 +2063,28 @@
     <string name="suffix_pattern_description">Testo personalizzato posizionato alla fine del nome file, utile per il controllo delle versioni come _v2, _edited o _final.</string>
     <string name="extension_pattern_description">L\'estensione del file (png, jpg, webp, ecc.), che corrisponde automaticamente al formato effettivamente salvato.</string>
     <string name="formatted_timestamp_pattern_description">Un timestamp personalizzabile che ti consente di definire il tuo formato in base alle specifiche Java per un ordinamento perfetto.</string>
+    <string name="fling_type">Tipo di lancio</string>
+    <string name="android_native">Android nativo</string>
+    <string name="ios_style">Stile iOS</string>
+    <string name="smooth_curve">Curva liscia</string>
+    <string name="quick_stop">Arresto rapido</string>
+    <string name="bouncy">Rimbalzante</string>
+    <string name="floaty">Galleggiante</string>
+    <string name="snappy">Scattante</string>
+    <string name="ultra_smooth">Ultra liscio</string>
+    <string name="adaptive">Adattivo</string>
+    <string name="accessibility_aware">Accessibilità consapevole</string>
+    <string name="reduced_motion">Movimento ridotto</string>
+    <string name="android_native_sub">Fisica di scorrimento nativa di Android</string>
+    <string name="smooth_sub">Scorrimento bilanciato e fluido per uso generale</string>
+    <string name="ios_style_sub">Comportamento di scorrimento simile a iOS con maggiore attrito</string>
+    <string name="smooth_curve_sub">Curva spline unica per una sensazione di scorrimento distinta</string>
+    <string name="quick_stop_sub">Scorrimento preciso con arresto rapido</string>
+    <string name="bouncy_sub">Scorrimento rimbalzante giocoso e reattivo</string>
+    <string name="floaty_sub">Pergamene lunghe e scorrevoli per la navigazione dei contenuti</string>
+    <string name="snappy_sub">Scorrimento rapido e reattivo per interfacce utente interattive</string>
+    <string name="ultra_smooth_sub">Scorrimento fluido premium con slancio esteso</string>
+    <string name="adaptive_sub">Regola la fisica in base alla velocità di lancio</string>
+    <string name="accessibility_aware_sub">Rispetta le impostazioni di accessibilità del sistema</string>
+    <string name="reduced_motion_sub">Movimento minimo per esigenze di accessibilità</string>
 </resources>
