--- a/core/resources/src/main/res/values-iw/strings.xml
+++ b/core/resources/src/main/res/values-iw/strings.xml
@@ -2065,4 +2065,28 @@
     <string name="suffix_pattern_description">טקסט מותאם אישית ממוקם בסוף שם הקובץ, שימושי לניהול גרסאות כמו _v2, _edited או _final.</string>
     <string name="extension_pattern_description">סיומת הקובץ (png, jpg, webp וכו\'), תואמת אוטומטית לפורמט השמור בפועל.</string>
     <string name="formatted_timestamp_pattern_description">חותמת זמן הניתנת להתאמה אישית המאפשרת לך להגדיר פורמט משלך לפי מפרט Java למיון מושלם.</string>
+    <string name="fling_type">סוג השלכה</string>
+    <string name="android_native">Android Native</string>
+    <string name="ios_style">סגנון iOS</string>
+    <string name="smooth_curve">עקומה חלקה</string>
+    <string name="quick_stop">עצירה מהירה</string>
+    <string name="bouncy">קופצני</string>
+    <string name="floaty">צף</string>
+    <string name="snappy">נִמרָץ</string>
+    <string name="ultra_smooth">אולטרה חלק</string>
+    <string name="adaptive">הסתגלות</string>
+    <string name="accessibility_aware">מודע לנגישות</string>
+    <string name="reduced_motion">תנועה מופחתת</string>
+    <string name="android_native_sub">פיזיקת גלילה מקורית של אנדרואיד להשוואה בסיסית</string>
+    <string name="smooth_sub">גלילה מאוזנת וחלקה לשימוש כללי</string>
+    <string name="ios_style_sub">חיכוך גבוה יותר התנהגות גלילה דמוית iOS</string>
+    <string name="smooth_curve_sub">עקומת ספליין ייחודית לתחושת גלילה ברורה</string>
+    <string name="quick_stop_sub">גלילה מדויקת עם עצירה מהירה</string>
+    <string name="bouncy_sub">גלילה קופצנית שובבה ומגיבה</string>
+    <string name="floaty_sub">מגילות ארוכות וגולשות לגלישה בתוכן</string>
+    <string name="snappy_sub">גלילה מהירה ומגיבה עבור ממשקי משתמש אינטראקטיביים</string>
+    <string name="ultra_smooth_sub">גלילה חלקה מובחרת עם מומנטום מורחב</string>
+    <string name="adaptive_sub">מתאים את הפיזיקה על סמך מהירות הטיפה</string>
+    <string name="accessibility_aware_sub">מכבד את הגדרות נגישות המערכת</string>
+    <string name="reduced_motion_sub">תנועה מינימלית לצרכי נגישות</string>
 </resources>
