--- a/core/resources/src/main/res/values-ja/strings.xml
+++ b/core/resources/src/main/res/values-ja/strings.xml
@@ -2062,4 +2062,28 @@
     <string name="suffix_pattern_description">ファイル名の末尾に配置されるカスタム テキスト。_v2、_edited、_final などのバージョン管理に役立ちます。</string>
     <string name="extension_pattern_description">ファイル拡張子 (png、jpg、webp など) は、実際に保存された形式に自動的に一致します。</string>
     <string name="formatted_timestamp_pattern_description">カスタマイズ可能なタイムスタンプを使用すると、完璧な並べ替えのために Java 仕様に従って独自の形式を定義できます。</string>
+    <string name="fling_type">フリングタイプ</string>
+    <string name="android_native">Androidネイティブ</string>
+    <string name="ios_style">iOSスタイル</string>
+    <string name="smooth_curve">滑らかな曲線</string>
+    <string name="quick_stop">クイックストップ</string>
+    <string name="bouncy">弾む</string>
+    <string name="floaty">ふわふわ</string>
+    <string name="snappy">キビキビ</string>
+    <string name="ultra_smooth">ウルトラスムーズ</string>
+    <string name="adaptive">アダプティブ</string>
+    <string name="accessibility_aware">アクセシビリティを意識した</string>
+    <string name="reduced_motion">モーションの軽減</string>
+    <string name="android_native_sub">Android のネイティブ スクロール物理学</string>
+    <string name="smooth_sub">一般的な用途向けのバランスの取れたスムーズなスクロール</string>
+    <string name="ios_style_sub">摩擦が大きい iOS のようなスクロール動作</string>
+    <string name="smooth_curve_sub">独特のスプライン曲線で独特のスクロール感を実現</string>
+    <string name="quick_stop_sub">正確なスクロールと素早い停止</string>
+    <string name="bouncy_sub">遊び心のある、応答性の高い弾むスクロール</string>
+    <string name="floaty_sub">コンテンツ閲覧のための長くて滑らかなスクロール</string>
+    <string name="snappy_sub">インタラクティブ UI の迅速で応答性の高いスクロール</string>
+    <string name="ultra_smooth_sub">勢いを増したプレミアムでスムーズなスクロール</string>
+    <string name="adaptive_sub">飛行速度に基づいて物理を調整します</string>
+    <string name="accessibility_aware_sub">システムのアクセシビリティ設定を尊重します</string>
+    <string name="reduced_motion_sub">アクセシビリティのニーズに合わせた最小限の動き</string>
 </resources>
