--- a/core/resources/src/main/res/values-kk/strings.xml
+++ b/core/resources/src/main/res/values-kk/strings.xml
@@ -2063,4 +2063,28 @@
     <string name="suffix_pattern_description">Файл атауының соңында орналастырылған теңшелетін мәтін, _v2, _edited немесе _final сияқты нұсқалар үшін пайдалы.</string>
     <string name="extension_pattern_description">Файл кеңейтімі (png, jpg, webp, т.б.), нақты сақталған пішімге автоматты түрде сәйкес келеді.</string>
     <string name="formatted_timestamp_pattern_description">Керемет сұрыптау үшін java спецификациясы бойынша өз пішіміңізді анықтауға мүмкіндік беретін теңшелетін уақыт белгісі.</string>
+    <string name="fling_type">Ұшу түрі</string>
+    <string name="android_native">Android Native</string>
+    <string name="ios_style">iOS стилі</string>
+    <string name="smooth_curve">Тегіс қисық</string>
+    <string name="quick_stop">Жылдам тоқтату</string>
+    <string name="bouncy">Боунси</string>
+    <string name="floaty">Қалқымалы</string>
+    <string name="snappy">Жылдам</string>
+    <string name="ultra_smooth">Ультра тегіс</string>
+    <string name="adaptive">Бейімделу</string>
+    <string name="accessibility_aware">Қол жетімділікті біледі</string>
+    <string name="reduced_motion">Қысқартылған қозғалыс</string>
+    <string name="android_native_sub">Жергілікті Android айналдыру физикасы</string>
+    <string name="smooth_sub">Жалпы пайдалану үшін теңдестірілген, тегіс айналдыру</string>
+    <string name="ios_style_sub">Жоғары үйкеліс iOS тәрізді айналдыру әрекеті</string>
+    <string name="smooth_curve_sub">Айналдыру сезімі үшін ерекше сплайн қисығы</string>
+    <string name="quick_stop_sub">Жылдам тоқтату арқылы дәл айналдыру</string>
+    <string name="bouncy_sub">Ойын, жауап беретін серпінді шиыршық</string>
+    <string name="floaty_sub">Мазмұнды шолу үшін ұзын, жылжымалы айналдырулар</string>
+    <string name="snappy_sub">Интерактивті UI үшін жылдам, жауапты айналдыру</string>
+    <string name="ultra_smooth_sub">Ұзартылған серпінмен премиум тегіс айналдыру</string>
+    <string name="adaptive_sub">Ұшу жылдамдығына негізделген физиканы реттейді</string>
+    <string name="accessibility_aware_sub">Жүйенің қол жетімділік параметрлерін құрметтейді</string>
+    <string name="reduced_motion_sub">Қол жетімділік қажеттіліктері үшін минималды қозғалыс</string>
 </resources>
