--- a/core/resources/src/main/res/values-ko/strings.xml
+++ b/core/resources/src/main/res/values-ko/strings.xml
@@ -2062,4 +2062,28 @@
     <string name="suffix_pattern_description">파일 이름 끝에 배치된 사용자 정의 텍스트는 _v2, _edited 또는 _final과 같은 버전 관리에 유용합니다.</string>
     <string name="extension_pattern_description">파일 확장자(png, jpg, webp 등)는 실제 저장된 형식과 자동으로 일치합니다.</string>
     <string name="formatted_timestamp_pattern_description">완벽한 정렬을 위해 Java 사양에 따라 고유한 형식을 정의할 수 있는 사용자 정의 가능한 타임스탬프입니다.</string>
+    <string name="fling_type">플링타입</string>
+    <string name="android_native">안드로이드 네이티브</string>
+    <string name="ios_style">iOS 스타일</string>
+    <string name="smooth_curve">부드러운 곡선</string>
+    <string name="quick_stop">급정지</string>
+    <string name="bouncy">탄력</string>
+    <string name="floaty">뜨는</string>
+    <string name="snappy">팔팔한</string>
+    <string name="ultra_smooth">울트라 스무스</string>
+    <string name="adaptive">적응형</string>
+    <string name="accessibility_aware">접근성 인식</string>
+    <string name="reduced_motion">움직임 감소</string>
+    <string name="android_native_sub">기준선 비교를 위한 기본 Android 스크롤 물리학</string>
+    <string name="smooth_sub">일반적인 사용을 위한 균형 있고 부드러운 스크롤</string>
+    <string name="ios_style_sub">마찰이 더 높은 iOS와 유사한 스크롤 동작</string>
+    <string name="smooth_curve_sub">독특한 스크롤 느낌을 위한 독특한 스플라인 곡선</string>
+    <string name="quick_stop_sub">빠른 정지로 정확한 스크롤</string>
+    <string name="bouncy_sub">재미있고 반응성이 뛰어난 탄력 있는 스크롤</string>
+    <string name="floaty_sub">콘텐츠 탐색을 위한 길고 미끄러지는 스크롤</string>
+    <string name="snappy_sub">대화형 UI를 위한 빠르고 반응성이 뛰어난 스크롤</string>
+    <string name="ultra_smooth_sub">확장된 추진력을 갖춘 프리미엄 부드러운 스크롤링</string>
+    <string name="adaptive_sub">플링 속도에 따라 물리학을 조정합니다.</string>
+    <string name="accessibility_aware_sub">시스템 접근성 설정을 존중합니다.</string>
+    <string name="reduced_motion_sub">접근성 요구 사항에 맞는 최소한의 동작</string>
 </resources>
