--- a/core/resources/src/main/res/values-lt/strings.xml
+++ b/core/resources/src/main/res/values-lt/strings.xml
@@ -2066,4 +2066,28 @@
     <string name="suffix_pattern_description">Pasirinktinis tekstas, dedamas failo pavadinimo pabaigoje, naudingas kuriant versijas, pvz., _v2, _edited arba _final.</string>
     <string name="extension_pattern_description">Failo plėtinys (png, jpg, webp ir kt.), automatiškai atitinkantis tikrąjį išsaugotą formatą.</string>
     <string name="formatted_timestamp_pattern_description">Pritaikoma laiko žyma, leidžianti nustatyti savo formatą pagal „Java“ specifikaciją, kad būtų galima tobulai rūšiuoti.</string>
+    <string name="fling_type">Išmetimo tipas</string>
+    <string name="android_native">„Android Native“.</string>
+    <string name="ios_style">iOS stilius</string>
+    <string name="smooth_curve">Lygi kreivė</string>
+    <string name="quick_stop">Greitas sustojimas</string>
+    <string name="bouncy">Bouncy</string>
+    <string name="floaty">Plūduriuojantis</string>
+    <string name="snappy">Šmaikštus</string>
+    <string name="ultra_smooth">Ultra Smooth</string>
+    <string name="adaptive">Prisitaikantis</string>
+    <string name="accessibility_aware">Prieinamumas Aware</string>
+    <string name="reduced_motion">Sumažintas judesys</string>
+    <string name="android_native_sub">„Android“ slinkties fizika, skirta pradiniam palyginimui</string>
+    <string name="smooth_sub">Subalansuotas, sklandus slinkimas bendram naudojimui</string>
+    <string name="ios_style_sub">Didesnė trintis, panaši į „iOS“ slinkimo elgsena</string>
+    <string name="smooth_curve_sub">Unikali spline kreivė, leidžianti aiškiai slinkti</string>
+    <string name="quick_stop_sub">Tikslus slinkimas su greitu stabdymu</string>
+    <string name="bouncy_sub">Žaismingas, reaguojantis šokinėjantis slinktis</string>
+    <string name="floaty_sub">Ilgi, slenkantys slinktys, skirti naršyti turinį</string>
+    <string name="snappy_sub">Greitas, reaguojantis interaktyvių vartotojo sąsajų slinkimas</string>
+    <string name="ultra_smooth_sub">Aukščiausios kokybės sklandus slinkimas su padidintu impulsu</string>
+    <string name="adaptive_sub">Koreguoja fiziką pagal svaidymo greitį</string>
+    <string name="accessibility_aware_sub">Gerbia sistemos prieinamumo nustatymus</string>
+    <string name="reduced_motion_sub">Minimalus judėjimas pasiekiamumo poreikiams</string>
 </resources>
