--- a/core/resources/src/main/res/values-mr/strings.xml
+++ b/core/resources/src/main/res/values-mr/strings.xml
@@ -2064,4 +2064,28 @@
     <string name="suffix_pattern_description">फाइल नावाच्या शेवटी ठेवलेला सानुकूल मजकूर, _v2, _edited किंवा _final सारख्या आवृत्तीसाठी उपयुक्त.</string>
     <string name="extension_pattern_description">फाइल विस्तार (png, jpg, webp, इ.), वास्तविक जतन केलेल्या स्वरूपाशी स्वयंचलितपणे जुळणारा.</string>
     <string name="formatted_timestamp_pattern_description">एक सानुकूल करण्यायोग्य टाइमस्टॅम्प जो तुम्हाला परिपूर्ण क्रमवारीसाठी जावा विनिर्देशानुसार तुमचे स्वतःचे स्वरूप परिभाषित करू देतो.</string>
+    <string name="fling_type">फ्लिंग प्रकार</string>
+    <string name="android_native">Android नेटिव्ह</string>
+    <string name="ios_style">iOS शैली</string>
+    <string name="smooth_curve">गुळगुळीत वक्र</string>
+    <string name="quick_stop">द्रुत थांबा</string>
+    <string name="bouncy">उछाल</string>
+    <string name="floaty">फ्लोटी</string>
+    <string name="snappy">स्नॅपी</string>
+    <string name="ultra_smooth">अल्ट्रा स्मूथ</string>
+    <string name="adaptive">अनुकूल</string>
+    <string name="accessibility_aware">प्रवेशयोग्यता जागरूक</string>
+    <string name="reduced_motion">कमी गती</string>
+    <string name="android_native_sub">मूळ Android स्क्रोल भौतिकशास्त्र</string>
+    <string name="smooth_sub">सामान्य वापरासाठी संतुलित, गुळगुळीत स्क्रोलिंग</string>
+    <string name="ios_style_sub">उच्च घर्षण iOS-सारखे स्क्रोल वर्तन</string>
+    <string name="smooth_curve_sub">वेगळ्या स्क्रोल अनुभवासाठी अद्वितीय स्प्लाइन वक्र</string>
+    <string name="quick_stop_sub">द्रुत थांबा सह अचूक स्क्रोलिंग</string>
+    <string name="bouncy_sub">खेळकर, प्रतिसाद देणारा बाऊन्सी स्क्रोल</string>
+    <string name="floaty_sub">सामग्री ब्राउझिंगसाठी लांब, ग्लाइडिंग स्क्रोल</string>
+    <string name="snappy_sub">परस्परसंवादी UI साठी द्रुत, प्रतिसादात्मक स्क्रोलिंग</string>
+    <string name="ultra_smooth_sub">विस्तारित गतीसह प्रीमियम गुळगुळीत स्क्रोलिंग</string>
+    <string name="adaptive_sub">फ्लिंग वेगावर आधारित भौतिकशास्त्र समायोजित करते</string>
+    <string name="accessibility_aware_sub">सिस्टम प्रवेशयोग्यता सेटिंग्जचा आदर करते</string>
+    <string name="reduced_motion_sub">प्रवेशयोग्यता गरजांसाठी किमान गती</string>
 </resources>
