--- a/core/resources/src/main/res/values-nl/strings.xml
+++ b/core/resources/src/main/res/values-nl/strings.xml
@@ -2063,4 +2063,28 @@
     <string name="suffix_pattern_description">Aangepaste tekst aan het einde van de bestandsnaam, handig voor versiebeheer zoals _v2, _edited of _final.</string>
     <string name="extension_pattern_description">De bestandsextensie (png, jpg, webp, etc.), die automatisch overeenkomt met het daadwerkelijk opgeslagen formaat.</string>
     <string name="formatted_timestamp_pattern_description">Een aanpasbare tijdstempel waarmee u uw eigen formaat kunt definiëren via Java-specificatie voor perfecte sortering.</string>
+    <string name="fling_type">Fling-type</string>
+    <string name="android_native">Android-native</string>
+    <string name="ios_style">iOS-stijl</string>
+    <string name="smooth_curve">Gladde curve</string>
+    <string name="quick_stop">Snelle stop</string>
+    <string name="bouncy">Veerkrachtig</string>
+    <string name="floaty">Zwevend</string>
+    <string name="snappy">Pittig</string>
+    <string name="ultra_smooth">Ultraglad</string>
+    <string name="adaptive">Adaptief</string>
+    <string name="accessibility_aware">Toegankelijkheid bewust</string>
+    <string name="reduced_motion">Verminderde beweging</string>
+    <string name="android_native_sub">Native Android-scrollfysica voor basislijnvergelijking</string>
+    <string name="smooth_sub">Gebalanceerd, soepel scrollen voor algemeen gebruik</string>
+    <string name="ios_style_sub">Hogere wrijving iOS-achtig scrollgedrag</string>
+    <string name="smooth_curve_sub">Unieke spline-curve voor een duidelijk scrollgevoel</string>
+    <string name="quick_stop_sub">Nauwkeurig scrollen met snelle stop</string>
+    <string name="bouncy_sub">Speelse, responsieve veerkrachtige scroll</string>
+    <string name="floaty_sub">Lange, glijdende scrolls voor het bladeren door inhoud</string>
+    <string name="snappy_sub">Snel, responsief scrollen voor interactieve gebruikersinterfaces</string>
+    <string name="ultra_smooth_sub">Premium soepel scrollen met uitgebreid momentum</string>
+    <string name="adaptive_sub">Past de fysica aan op basis van de vliegsnelheid</string>
+    <string name="accessibility_aware_sub">Respecteert de instellingen voor systeemtoegankelijkheid</string>
+    <string name="reduced_motion_sub">Minimale beweging voor toegankelijkheidsbehoeften</string>
 </resources>
