--- a/core/resources/src/main/res/values-pl/strings.xml
+++ b/core/resources/src/main/res/values-pl/strings.xml
@@ -2065,4 +2065,28 @@
     <string name="suffix_pattern_description">Niestandardowy tekst umieszczony na końcu nazwy pliku, przydatny przy wersjonowaniu, takim jak _v2, _edited lub _final.</string>
     <string name="extension_pattern_description">Rozszerzenie pliku (png, jpg, webp itp.), automatycznie dopasowujące się do aktualnie zapisanego formatu.</string>
     <string name="formatted_timestamp_pattern_description">Konfigurowalny znacznik czasu, który pozwala zdefiniować własny format według specyfikacji Java w celu idealnego sortowania.</string>
+    <string name="fling_type">Typ rzucania</string>
+    <string name="android_native">Natywny Android</string>
+    <string name="ios_style">Styl iOS</string>
+    <string name="smooth_curve">Gładka krzywa</string>
+    <string name="quick_stop">Szybkie zatrzymanie</string>
+    <string name="bouncy">Sprężysty</string>
+    <string name="floaty">Pływający</string>
+    <string name="snappy">Żwawy</string>
+    <string name="ultra_smooth">Ultragładka</string>
+    <string name="adaptive">Adaptacyjny</string>
+    <string name="accessibility_aware">Świadomość dostępności</string>
+    <string name="reduced_motion">Ograniczony ruch</string>
+    <string name="android_native_sub">Natywna fizyka przewijania Androida</string>
+    <string name="smooth_sub">Zrównoważone, płynne przewijanie do ogólnego użytku</string>
+    <string name="ios_style_sub">Zachowanie przewijania podobne do systemu iOS o większym tarciu</string>
+    <string name="smooth_curve_sub">Unikalna krzywa splajnu zapewniająca wyraźne wyczucie przewijania</string>
+    <string name="quick_stop_sub">Precyzyjne przewijanie z szybkim zatrzymaniem</string>
+    <string name="bouncy_sub">Zabawny, responsywny, sprężysty przewijak</string>
+    <string name="floaty_sub">Długie, przesuwające się zwoje do przeglądania treści</string>
+    <string name="snappy_sub">Szybkie i responsywne przewijanie dla interaktywnych interfejsów użytkownika</string>
+    <string name="ultra_smooth_sub">Wysokiej jakości płynne przewijanie z wydłużonym tempem</string>
+    <string name="adaptive_sub">Dostosowuje fizykę w oparciu o prędkość rzucania</string>
+    <string name="accessibility_aware_sub">Przestrzega systemowych ustawień dostępności</string>
+    <string name="reduced_motion_sub">Minimalny ruch ze względu na potrzeby dostępności</string>
 </resources>
