--- a/core/resources/src/main/res/values-ro/strings.xml
+++ b/core/resources/src/main/res/values-ro/strings.xml
@@ -2064,4 +2064,28 @@
     <string name="suffix_pattern_description">Text personalizat plasat la sfârșitul numelui fișierului, util pentru versiuni precum _v2, _edited sau _final.</string>
     <string name="extension_pattern_description">Extensia fișierului (png, jpg, webp etc.), care se potrivește automat cu formatul salvat real.</string>
     <string name="formatted_timestamp_pattern_description">O marcaj de timp personalizabil care vă permite să vă definiți propriul format după specificațiile java pentru o sortare perfectă.</string>
+    <string name="fling_type">Tip Fling</string>
+    <string name="android_native">Nativ Android</string>
+    <string name="ios_style">Stilul iOS</string>
+    <string name="smooth_curve">Curba lină</string>
+    <string name="quick_stop">Oprire rapidă</string>
+    <string name="bouncy">Bouncy</string>
+    <string name="floaty">Plutitor</string>
+    <string name="snappy">Vioi</string>
+    <string name="ultra_smooth">Ultra Smooth</string>
+    <string name="adaptive">Adaptiv</string>
+    <string name="accessibility_aware">Conștient de accesibilitate</string>
+    <string name="reduced_motion">Mișcare redusă</string>
+    <string name="android_native_sub">Fizica nativă a derulării Android</string>
+    <string name="smooth_sub">Defilare echilibrată, lină pentru uz general</string>
+    <string name="ios_style_sub">Comportament de defilare asemănător iOS cu frecare mai mare</string>
+    <string name="smooth_curve_sub">Curba spline unică pentru o senzație distinctă de defilare</string>
+    <string name="quick_stop_sub">Defilare precisă cu oprire rapidă</string>
+    <string name="bouncy_sub">Scroll jucăuș și receptiv</string>
+    <string name="floaty_sub">Defilări lungi, glisante, pentru navigarea prin conținut</string>
+    <string name="snappy_sub">Defilare rapidă și receptivă pentru interfețele de utilizare interactive</string>
+    <string name="ultra_smooth_sub">Defilare lină premium cu impuls extins</string>
+    <string name="adaptive_sub">Ajustează fizica pe baza vitezei de aruncare</string>
+    <string name="accessibility_aware_sub">Respectă setările de accesibilitate ale sistemului</string>
+    <string name="reduced_motion_sub">Mișcare minimă pentru nevoile de accesibilitate</string>
 </resources>
