--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -2065,4 +2065,28 @@
     <string name="suffix_pattern_description">Пользовательский текст, помещаемый в конце имени файла, полезный для управления версиями, например _v2, _edited или _final.</string>
     <string name="extension_pattern_description">Расширение файла (png, jpg, webp и т. д.) автоматически соответствует фактическому сохраненному формату.</string>
     <string name="formatted_timestamp_pattern_description">Настраиваемая временная метка, позволяющая определить собственный формат по спецификации Java для идеальной сортировки.</string>
+    <string name="fling_type">Тип броска</string>
+    <string name="android_native">Android</string>
+    <string name="ios_style">Стиль iOS</string>
+    <string name="smooth_curve">Гладкая кривая</string>
+    <string name="quick_stop">Быстрая остановка</string>
+    <string name="bouncy">Надувной</string>
+    <string name="floaty">Плавучий</string>
+    <string name="snappy">Шустрый</string>
+    <string name="ultra_smooth">Ультра гладкий</string>
+    <string name="adaptive">Адаптивный</string>
+    <string name="accessibility_aware">Доступность</string>
+    <string name="reduced_motion">Уменьшенное движение</string>
+    <string name="android_native_sub">Встроенная физика прокрутки Android</string>
+    <string name="smooth_sub">Сбалансированная, плавная прокрутка для общего использования.</string>
+    <string name="ios_style_sub">Поведение прокрутки, подобное iOS, с повышенным трением</string>
+    <string name="smooth_curve_sub">Уникальная кривая сплайна для четкого ощущения прокрутки</string>
+    <string name="quick_stop_sub">Точная прокрутка с быстрой остановкой</string>
+    <string name="bouncy_sub">Игривый, отзывчивый, упругий прокрутка</string>
+    <string name="floaty_sub">Длинные скользящие прокрутки для просмотра контента</string>
+    <string name="snappy_sub">Быстрая и отзывчивая прокрутка для интерактивных интерфейсов.</string>
+    <string name="ultra_smooth_sub">Плавная прокрутка премиум-класса с увеличенным импульсом</string>
+    <string name="adaptive_sub">Регулирует физику в зависимости от скорости броска.</string>
+    <string name="accessibility_aware_sub">Соблюдает настройки специальных возможностей системы</string>
+    <string name="reduced_motion_sub">Минимальное движение для обеспечения доступности</string>
 </resources>
