--- a/core/resources/src/main/res/values-si/strings.xml
+++ b/core/resources/src/main/res/values-si/strings.xml
@@ -2064,4 +2064,28 @@
     <string name="suffix_pattern_description">අභිරුචි පෙළ ගොනු නාමයේ අවසානයේ තබා ඇත, _v2, _edited, හෝ _final වැනි අනුවාද සඳහා ප්‍රයෝජනවත් වේ.</string>
     <string name="extension_pattern_description">ගොනු දිගුව (png, jpg, webp, ආදිය), සත්‍ය සුරැකි ආකෘතියට ස්වයංක්‍රීයව ගැලපේ.</string>
     <string name="formatted_timestamp_pattern_description">පරිපූර්ණ වර්ග කිරීම සඳහා java පිරිවිතර මගින් ඔබේම ආකෘතිය නිර්වචනය කිරීමට ඔබට ඉඩ සලසන අභිරුචිකරණය කළ හැකි වේලා මුද්දරයක්.</string>
+    <string name="fling_type">ෆ්ලින්ග් වර්ගය</string>
+    <string name="android_native">Android ස්වදේශීය</string>
+    <string name="ios_style">iOS විලාසය</string>
+    <string name="smooth_curve">Smooth Curve</string>
+    <string name="quick_stop">ඉක්මන් නැවතුම</string>
+    <string name="bouncy">බූන්සි</string>
+    <string name="floaty">පාවෙන</string>
+    <string name="snappy">කපටි</string>
+    <string name="ultra_smooth">Ultra Smooth</string>
+    <string name="adaptive">අනුවර්තනය</string>
+    <string name="accessibility_aware">ප්‍රවේශ්‍යතා දැනුවත්</string>
+    <string name="reduced_motion">අඩු කළ චලනය</string>
+    <string name="android_native_sub">මූලික සංසන්දනය සඳහා දේශීය Android අනුචලන භෞතික විද්‍යාව</string>
+    <string name="smooth_sub">සාමාන්‍ය භාවිතය සඳහා සමබර, සුමට අනුචලනය</string>
+    <string name="ios_style_sub">ඉහළ ඝර්ෂණ iOS වැනි අනුචලන හැසිරීම</string>
+    <string name="smooth_curve_sub">වෙනස් අනුචලන හැඟීම සඳහා අද්විතීය spline වක්රය</string>
+    <string name="quick_stop_sub">ඉක්මන් නැවතුම් සමග නිවැරදි අනුචලනය</string>
+    <string name="bouncy_sub">සෙල්ලක්කාර, ප්‍රතිචාරාත්මක බූන්සි අනුචලනය</string>
+    <string name="floaty_sub">අන්තර්ගත බ්‍රවුස් කිරීම සඳහා දිගු, ලිස්සා යන අනුචලන</string>
+    <string name="snappy_sub">අන්තර්ක්‍රියාකාරී UI සඳහා ඉක්මන්, ප්‍රතිචාරාත්මක අනුචලනය</string>
+    <string name="ultra_smooth_sub">විස්තීරණ ගම්‍යතාවයක් සහිත වාරික සුමට අනුචලනය</string>
+    <string name="adaptive_sub">ප්‍රවේගය මත පදනම්ව භෞතික විද්‍යාව සීරුමාරු කරයි</string>
+    <string name="accessibility_aware_sub">පද්ධති ප්‍රවේශ්‍යතා සැකසීම් වලට ගරු කරයි</string>
+    <string name="reduced_motion_sub">ප්රවේශ්යතා අවශ්යතා සඳහා අවම චලනය</string>
 </resources>
