--- a/core/resources/src/main/res/values-sk/strings.xml
+++ b/core/resources/src/main/res/values-sk/strings.xml
@@ -2065,4 +2065,28 @@
     <string name="suffix_pattern_description">Vlastný text umiestnený na konci názvu súboru, užitočný pri vytváraní verzií ako _v2, _edited alebo _final.</string>
     <string name="extension_pattern_description">Prípona súboru (png, jpg, webp atď.), ktorá sa automaticky zhoduje so skutočným uloženým formátom.</string>
     <string name="formatted_timestamp_pattern_description">Prispôsobiteľná časová pečiatka, ktorá vám umožní definovať svoj vlastný formát podľa špecifikácie Java pre dokonalé triedenie.</string>
+    <string name="fling_type">Typ flingu</string>
+    <string name="android_native">Android Natívne</string>
+    <string name="ios_style">Štýl iOS</string>
+    <string name="smooth_curve">Hladká krivka</string>
+    <string name="quick_stop">Rýchle zastavenie</string>
+    <string name="bouncy">Skákanie</string>
+    <string name="floaty">Plávajúce</string>
+    <string name="snappy">Snappy</string>
+    <string name="ultra_smooth">Ultra hladké</string>
+    <string name="adaptive">Adaptívny</string>
+    <string name="accessibility_aware">Prístupnosť Aware</string>
+    <string name="reduced_motion">Znížený pohyb</string>
+    <string name="android_native_sub">Natívna fyzika posúvania systému Android</string>
+    <string name="smooth_sub">Vyvážené, plynulé rolovanie pre všeobecné použitie</string>
+    <string name="ios_style_sub">Vyššie trenie pri posúvaní podobnému iOS</string>
+    <string name="smooth_curve_sub">Jedinečná krivka spline pre zreteľný pocit rolovania</string>
+    <string name="quick_stop_sub">Presné rolovanie s rýchlym zastavením</string>
+    <string name="bouncy_sub">Hravé, pohotové skákacie rolovanie</string>
+    <string name="floaty_sub">Dlhé, kĺzavé rolky na prehliadanie obsahu</string>
+    <string name="snappy_sub">Rýchle a citlivé posúvanie pre interaktívne používateľské rozhrania</string>
+    <string name="ultra_smooth_sub">Prémiové plynulé rolovanie s predĺženou dynamikou</string>
+    <string name="adaptive_sub">Upravuje fyziku na základe rýchlosti odletu</string>
+    <string name="accessibility_aware_sub">Rešpektuje nastavenia prístupnosti systému</string>
+    <string name="reduced_motion_sub">Minimálny pohyb pre potreby dostupnosti</string>
 </resources>
