--- a/core/resources/src/main/res/values-sr/strings.xml
+++ b/core/resources/src/main/res/values-sr/strings.xml
@@ -2064,4 +2064,28 @@
     <string name="suffix_pattern_description">Прилагођени текст постављен на крај назива датотеке, користан за верзионисање као што је _в2, _едитед или _финал.</string>
     <string name="extension_pattern_description">Екстензија датотеке (пнг, јпг, вебп, итд.), аутоматски се подудара са стварним сачуваним форматом.</string>
     <string name="formatted_timestamp_pattern_description">Прилагодљива временска ознака која вам омогућава да дефинишете сопствени формат помоћу Јава спецификације за савршено сортирање.</string>
+    <string name="fling_type">Флинг Типе</string>
+    <string name="android_native">Андроид изворни</string>
+    <string name="ios_style">иОС стил</string>
+    <string name="smooth_curve">Смоотх Цурве</string>
+    <string name="quick_stop">Куицк Стоп</string>
+    <string name="bouncy">Боунци</string>
+    <string name="floaty">Флоати</string>
+    <string name="snappy">Снаппи</string>
+    <string name="ultra_smooth">Ултра Смоотх</string>
+    <string name="adaptive">Адаптиве</string>
+    <string name="accessibility_aware">Аццессибилити Аваре</string>
+    <string name="reduced_motion">Редуцед Мотион</string>
+    <string name="android_native_sub">Природна физика Андроид скроловања за основно поређење</string>
+    <string name="smooth_sub">Уравнотежено, глатко померање за општу употребу</string>
+    <string name="ios_style_sub">Понашање померања попут иОС-а са већим трењем</string>
+    <string name="smooth_curve_sub">Јединствена сплине крива за јасан осећај померања</string>
+    <string name="quick_stop_sub">Прецизно померање са брзим заустављањем</string>
+    <string name="bouncy_sub">Разиграни, покретни померајући се померај</string>
+    <string name="floaty_sub">Дуги, клизећи скроловање за прегледање садржаја</string>
+    <string name="snappy_sub">Брзо и брзо померање за интерактивни кориснички интерфејс</string>
+    <string name="ultra_smooth_sub">Врхунско глатко померање са продуженим замахом</string>
+    <string name="adaptive_sub">Подешава физику на основу брзине бацања</string>
+    <string name="accessibility_aware_sub">Поштује подешавања приступачности система</string>
+    <string name="reduced_motion_sub">Минимално кретање за потребе приступачности</string>
 </resources>
