--- a/core/resources/src/main/res/values-ta/strings.xml
+++ b/core/resources/src/main/res/values-ta/strings.xml
@@ -2063,4 +2063,28 @@
     <string name="suffix_pattern_description">_v2, _edited, அல்லது _final போன்ற பதிப்பிற்குப் பயன்படும், கோப்புப் பெயரின் இறுதியில் வைக்கப்படும் தனிப்பயன் உரை.</string>
     <string name="extension_pattern_description">கோப்பு நீட்டிப்பு (png, jpg, webp, முதலியன), உண்மையான சேமிக்கப்பட்ட வடிவத்துடன் தானாகவே பொருந்தும்.</string>
     <string name="formatted_timestamp_pattern_description">ஒரு தனிப்பயனாக்கக்கூடிய நேர முத்திரை, சரியான வரிசைப்படுத்துதலுக்கான ஜாவா விவரக்குறிப்பு மூலம் உங்கள் சொந்த வடிவமைப்பை வரையறுக்க உதவுகிறது.</string>
+    <string name="fling_type">ஃபிளிங் வகை</string>
+    <string name="android_native">ஆண்ட்ராய்டு நேட்டிவ்</string>
+    <string name="ios_style">iOS உடை</string>
+    <string name="smooth_curve">மென்மையான வளைவு</string>
+    <string name="quick_stop">விரைவு நிறுத்து</string>
+    <string name="bouncy">துள்ளல்</string>
+    <string name="floaty">மிதக்கும்</string>
+    <string name="snappy">ஸ்னாப்பி</string>
+    <string name="ultra_smooth">அல்ட்ரா ஸ்மூத்</string>
+    <string name="adaptive">தழுவல்</string>
+    <string name="accessibility_aware">அணுகல் விழிப்புணர்வு</string>
+    <string name="reduced_motion">குறைக்கப்பட்ட இயக்கம்</string>
+    <string name="android_native_sub">நேட்டிவ் ஆண்ட்ராய்டு ஸ்க்ரோல் இயற்பியல்</string>
+    <string name="smooth_sub">பொதுவான பயன்பாட்டிற்கு சீரான, மென்மையான ஸ்க்ரோலிங்</string>
+    <string name="ios_style_sub">அதிக உராய்வு iOS போன்ற உருள் நடத்தை</string>
+    <string name="smooth_curve_sub">தனித்துவமான ஸ்க்ரோல் ஃபீலுக்கு தனித்துவமான ஸ்ப்லைன் வளைவு</string>
+    <string name="quick_stop_sub">விரைவான நிறுத்தத்துடன் துல்லியமான ஸ்க்ரோலிங்</string>
+    <string name="bouncy_sub">விளையாட்டுத்தனமான, பதிலளிக்கக்கூடிய துள்ளல் உருள்</string>
+    <string name="floaty_sub">உள்ளடக்க உலாவலுக்கான நீண்ட, சறுக்கும் சுருள்கள்</string>
+    <string name="snappy_sub">ஊடாடும் UIகளுக்கான விரைவான, பதிலளிக்கக்கூடிய ஸ்க்ரோலிங்</string>
+    <string name="ultra_smooth_sub">நீட்டிக்கப்பட்ட வேகத்துடன் பிரீமியம் மென்மையான ஸ்க்ரோலிங்</string>
+    <string name="adaptive_sub">பறக்கும் வேகத்தின் அடிப்படையில் இயற்பியலைச் சரிசெய்கிறது</string>
+    <string name="accessibility_aware_sub">கணினி அணுகல்தன்மை அமைப்புகளை மதிக்கிறது</string>
+    <string name="reduced_motion_sub">அணுகல் தேவைகளுக்கான குறைந்தபட்ச இயக்கம்</string>
 </resources>
