--- a/core/resources/src/main/res/values-te/strings.xml
+++ b/core/resources/src/main/res/values-te/strings.xml
@@ -2063,4 +2063,28 @@
     <string name="suffix_pattern_description">_v2, _edited లేదా _final వంటి సంస్కరణకు ఉపయోగపడే అనుకూల వచనం ఫైల్ పేరు చివరిలో ఉంచబడుతుంది.</string>
     <string name="extension_pattern_description">ఫైల్ పొడిగింపు (png, jpg, webp, మొదలైనవి), స్వయంచాలకంగా సేవ్ చేయబడిన వాస్తవ ఆకృతికి సరిపోలుతుంది.</string>
     <string name="formatted_timestamp_pattern_description">అనుకూలీకరించదగిన టైమ్‌స్టాంప్, ఇది ఖచ్చితమైన సార్టింగ్ కోసం జావా స్పెసిఫికేషన్ ద్వారా మీ స్వంత ఆకృతిని నిర్వచించటానికి మిమ్మల్ని అనుమతిస్తుంది.</string>
+    <string name="fling_type">ఫ్లింగ్ రకం</string>
+    <string name="android_native">Android స్థానిక</string>
+    <string name="ios_style">iOS శైలి</string>
+    <string name="smooth_curve">స్మూత్ కర్వ్</string>
+    <string name="quick_stop">త్వరిత ఆపు</string>
+    <string name="bouncy">ఎగిరి పడే</string>
+    <string name="floaty">తేలియాడే</string>
+    <string name="snappy">చురుకైన</string>
+    <string name="ultra_smooth">అల్ట్రా స్మూత్</string>
+    <string name="adaptive">అనుకూలమైనది</string>
+    <string name="accessibility_aware">యాక్సెసిబిలిటీ అవేర్</string>
+    <string name="reduced_motion">తగ్గిన చలనం</string>
+    <string name="android_native_sub">స్థానిక ఆండ్రాయిడ్ స్క్రోల్ ఫిజిక్స్</string>
+    <string name="smooth_sub">సాధారణ ఉపయోగం కోసం సమతుల్య, మృదువైన స్క్రోలింగ్</string>
+    <string name="ios_style_sub">అధిక ఘర్షణ iOS-వంటి స్క్రోల్ ప్రవర్తన</string>
+    <string name="smooth_curve_sub">ప్రత్యేకమైన స్క్రోల్ అనుభూతి కోసం ప్రత్యేకమైన స్ప్లైన్ కర్వ్</string>
+    <string name="quick_stop_sub">త్వరిత స్టాపింగ్‌తో ఖచ్చితమైన స్క్రోలింగ్</string>
+    <string name="bouncy_sub">ఉల్లాసభరితమైన, ప్రతిస్పందించే ఎగిరి పడే స్క్రోల్</string>
+    <string name="floaty_sub">కంటెంట్ బ్రౌజింగ్ కోసం పొడవైన, గ్లైడింగ్ స్క్రోల్‌లు</string>
+    <string name="snappy_sub">ఇంటరాక్టివ్ UIల కోసం త్వరిత, ప్రతిస్పందించే స్క్రోలింగ్</string>
+    <string name="ultra_smooth_sub">పొడిగించిన మొమెంటంతో ప్రీమియం మృదువైన స్క్రోలింగ్</string>
+    <string name="adaptive_sub">ఫ్లింగ్ వేగం ఆధారంగా భౌతిక శాస్త్రాన్ని సర్దుబాటు చేస్తుంది</string>
+    <string name="accessibility_aware_sub">సిస్టమ్ యాక్సెసిబిలిటీ సెట్టింగ్‌లను గౌరవిస్తుంది</string>
+    <string name="reduced_motion_sub">ప్రాప్యత అవసరాల కోసం కనీస చలనం</string>
 </resources>
