--- a/core/resources/src/main/res/values-th/strings.xml
+++ b/core/resources/src/main/res/values-th/strings.xml
@@ -2062,4 +2062,28 @@
     <string name="suffix_pattern_description">ข้อความที่กำหนดเองวางไว้ท้ายชื่อไฟล์ ซึ่งมีประโยชน์สำหรับการกำหนดเวอร์ชัน เช่น _v2, _edited หรือ _final</string>
     <string name="extension_pattern_description">นามสกุลไฟล์ (png, jpg, webp ฯลฯ) จะตรงกับรูปแบบที่บันทึกไว้จริงโดยอัตโนมัติ</string>
     <string name="formatted_timestamp_pattern_description">การประทับเวลาที่ปรับแต่งได้ซึ่งช่วยให้คุณกำหนดรูปแบบของคุณเองตามข้อกำหนดของ Java เพื่อการเรียงลำดับที่สมบูรณ์แบบ</string>
+    <string name="fling_type">ประเภทพุ่ง</string>
+    <string name="android_native">ระบบปฏิบัติการ Android</string>
+    <string name="ios_style">iOS สไตล์</string>
+    <string name="smooth_curve">เส้นโค้งเรียบ</string>
+    <string name="quick_stop">หยุดด่วน</string>
+    <string name="bouncy">เด้ง</string>
+    <string name="floaty">ลอย</string>
+    <string name="snappy">เร็ว</string>
+    <string name="ultra_smooth">เรียบเนียนเป็นพิเศษ</string>
+    <string name="adaptive">ปรับตัวได้</string>
+    <string name="accessibility_aware">การรับรู้การเข้าถึง</string>
+    <string name="reduced_motion">ลดการเคลื่อนไหว</string>
+    <string name="android_native_sub">ฟิสิกส์การเลื่อน Android ดั้งเดิมสำหรับการเปรียบเทียบพื้นฐาน</string>
+    <string name="smooth_sub">การเลื่อนที่สมดุลและราบรื่นสำหรับการใช้งานทั่วไป</string>
+    <string name="ios_style_sub">พฤติกรรมการเลื่อนเหมือน iOS ที่มีแรงเสียดทานสูงขึ้น</string>
+    <string name="smooth_curve_sub">เส้นโค้งที่ไม่ซ้ำใครเพื่อความรู้สึกในการเลื่อนที่แตกต่างกัน</string>
+    <string name="quick_stop_sub">การเลื่อนที่แม่นยำพร้อมการหยุดอย่างรวดเร็ว</string>
+    <string name="bouncy_sub">เลื่อนเด้งที่สนุกสนานและตอบสนอง</string>
+    <string name="floaty_sub">การเลื่อนแบบเลื่อนยาวสำหรับการเรียกดูเนื้อหา</string>
+    <string name="snappy_sub">การเลื่อนที่รวดเร็วและตอบสนองสำหรับ UI แบบโต้ตอบ</string>
+    <string name="ultra_smooth_sub">การเลื่อนอย่างราบรื่นระดับพรีเมียมพร้อมโมเมนตัมที่ขยายออกไป</string>
+    <string name="adaptive_sub">ปรับฟิสิกส์ตามความเร็วการเหวี่ยง</string>
+    <string name="accessibility_aware_sub">เคารพการตั้งค่าการเข้าถึงระบบ</string>
+    <string name="reduced_motion_sub">การเคลื่อนไหวน้อยที่สุดสำหรับความต้องการในการเข้าถึง</string>
 </resources>
