--- a/core/resources/src/main/res/values-tr/strings.xml
+++ b/core/resources/src/main/res/values-tr/strings.xml
@@ -2063,4 +2063,28 @@
     <string name="suffix_pattern_description">Dosya adının sonuna yerleştirilen ve _v2, _edited veya _final gibi sürüm oluşturma için yararlı olan özel metin.</string>
     <string name="extension_pattern_description">Gerçek kaydedilen formatla otomatik olarak eşleşen dosya uzantısı (png, jpg, webp vb.).</string>
     <string name="formatted_timestamp_pattern_description">Mükemmel sıralama için Java spesifikasyonuna göre kendi formatınızı tanımlamanıza olanak tanıyan özelleştirilebilir bir zaman damgası.</string>
+    <string name="fling_type">Fırlatma Türü</string>
+    <string name="android_native">Android Yerel</string>
+    <string name="ios_style">iOS Stili</string>
+    <string name="smooth_curve">Pürüzsüz Eğri</string>
+    <string name="quick_stop">Hızlı Durdurma</string>
+    <string name="bouncy">kabarık</string>
+    <string name="floaty">Yüzen</string>
+    <string name="snappy">Hızlı</string>
+    <string name="ultra_smooth">Ultra Pürüzsüz</string>
+    <string name="adaptive">Uyarlanabilir</string>
+    <string name="accessibility_aware">Erişilebilirlik Farkındalığı</string>
+    <string name="reduced_motion">Azaltılmış Hareket</string>
+    <string name="android_native_sub">Yerel Android kaydırma fiziği</string>
+    <string name="smooth_sub">Genel kullanım için dengeli, düzgün kaydırma</string>
+    <string name="ios_style_sub">Daha yüksek sürtünmeli iOS benzeri kaydırma davranışı</string>
+    <string name="smooth_curve_sub">Farklı kaydırma hissi için benzersiz spline eğrisi</string>
+    <string name="quick_stop_sub">Hızlı durdurmayla hassas kaydırma</string>
+    <string name="bouncy_sub">Eğlenceli, hızlı tepki veren zıplayan kaydırma</string>
+    <string name="floaty_sub">İçeriğe göz atmak için uzun, kayan kaydırmalar</string>
+    <string name="snappy_sub">Etkileşimli kullanıcı arayüzleri için hızlı, duyarlı kaydırma</string>
+    <string name="ultra_smooth_sub">Genişletilmiş momentumla birinci sınıf yumuşak kaydırma</string>
+    <string name="adaptive_sub">Fırlatma hızına göre fiziği ayarlar</string>
+    <string name="accessibility_aware_sub">Sistem erişilebilirlik ayarlarına saygı duyar</string>
+    <string name="reduced_motion_sub">Erişilebilirlik ihtiyaçları için minimum hareket</string>
 </resources>
