--- a/core/resources/src/main/res/values-ug/strings.xml
+++ b/core/resources/src/main/res/values-ug/strings.xml
@@ -2063,4 +2063,28 @@
     <string name="suffix_pattern_description">ھۆججەت نامىنىڭ ئاخىرىغا قويۇلغان ئىختىيارى تېكىست ، _v2 ، _edited ياكى _final غا ئوخشاش نەشىر قىلىشقا پايدىلىق.</string>
     <string name="extension_pattern_description">ھۆججەت كېڭەيتىلمىسى (png, jpg ، webp قاتارلىقلار) ، ئاپتوماتىك ساقلانغان فورماتقا ئاپتوماتىك ماس كېلىدۇ.</string>
     <string name="formatted_timestamp_pattern_description">مۇكەممەل تەرتىپلەش ئۈچۈن java ئۆلچىمى ئارقىلىق ئۆزىڭىزنىڭ فورماتىنى بەلگىلىيەلەيدىغان خاسلاشتۇرغىلى بولىدىغان ۋاقىت تامغىسى.</string>
+    <string name="fling_type">Fling Type</string>
+    <string name="android_native">Android Native</string>
+    <string name="ios_style">iOS ئۇسلۇبى</string>
+    <string name="smooth_curve">يۇمىلاق ئەگرى سىزىق</string>
+    <string name="quick_stop">Quick Stop</string>
+    <string name="bouncy">Bouncy</string>
+    <string name="floaty">Floaty</string>
+    <string name="snappy">Snappy</string>
+    <string name="ultra_smooth">Ultra Smooth</string>
+    <string name="adaptive">ماسلىشىشچان</string>
+    <string name="accessibility_aware">Accessibility Aware</string>
+    <string name="reduced_motion">ھەرىكەتنى ئازايتتى</string>
+    <string name="android_native_sub">يەرلىك ئاندىرويىد دومىلىما فىزىكىسى</string>
+    <string name="smooth_sub">ئادەتتىكى ئىشلىتىش ئۈچۈن تەڭپۇڭ ، سىلىق ئۆرۈش</string>
+    <string name="ios_style_sub">تېخىمۇ يۇقىرى سۈركىلىش iOS كە ئوخشاش سىيرىلما ھەرىكەت</string>
+    <string name="smooth_curve_sub">روشەن سىيرىلىش تۇيغۇسى ئۈچۈن ئۆزگىچە ئەگرى سىزىق</string>
+    <string name="quick_stop_sub">تېز توختاش بىلەن توغرا سىيرىلىش</string>
+    <string name="bouncy_sub">ئوينايدىغان ، ئىنكاس قايتۇرىدىغان قاڭقىش</string>
+    <string name="floaty_sub">مەزمۇن كۆرۈش ئۈچۈن ئۇزۇن ، سىيرىلما دومىلىما</string>
+    <string name="snappy_sub">ئۆز-ئارا تەسىر كۆرسىتىدىغان UI ئۈچۈن تېز ، ئىنكاس قايتۇرۇش</string>
+    <string name="ultra_smooth_sub">ئۇزارتىلغان ھەرىكەتلەندۈرگۈچ كۈچ بىلەن ئەلا سۈپەتلىك سىيرىلىش</string>
+    <string name="adaptive_sub">فىزىكىنى تەڭشەش سۈرئىتىگە ئاساسەن تەڭشەيدۇ</string>
+    <string name="accessibility_aware_sub">سىستېمىنىڭ زىيارەت قىلىش تەڭشىكىگە ھۆرمەت قىلىدۇ</string>
+    <string name="reduced_motion_sub">زىيارەت قىلىش ئېھتىياجى ئۈچۈن ئەڭ تۆۋەن ھەرىكەت</string>
 </resources>
