--- a/core/resources/src/main/res/values-uk/strings.xml
+++ b/core/resources/src/main/res/values-uk/strings.xml
@@ -2065,4 +2065,28 @@
     <string name="suffix_pattern_description">Спеціальний текст, розміщений у кінці назви файлу, корисний для керування версіями, наприклад _v2, _edited або _final.</string>
     <string name="extension_pattern_description">Розширення файлу (png, jpg, webp тощо), що автоматично відповідає дійсному збереженому формату.</string>
     <string name="formatted_timestamp_pattern_description">Настроювана часова позначка, яка дозволяє визначити власний формат за специфікацією Java для ідеального сортування.</string>
+    <string name="fling_type">Тип кидка</string>
+    <string name="android_native">Android Native</string>
+    <string name="ios_style">Стиль iOS</string>
+    <string name="smooth_curve">Плавна крива</string>
+    <string name="quick_stop">Швидка зупинка</string>
+    <string name="bouncy">Стрибкий</string>
+    <string name="floaty">Плаваючий</string>
+    <string name="snappy">Стрімкий</string>
+    <string name="ultra_smooth">Ультра гладкий</string>
+    <string name="adaptive">Адаптивний</string>
+    <string name="accessibility_aware">Спеціальні можливості</string>
+    <string name="reduced_motion">Зменшений рух</string>
+    <string name="android_native_sub">Вбудована фізика прокручування Android для базового порівняння</string>
+    <string name="smooth_sub">Збалансована плавна прокрутка для загального використання</string>
+    <string name="ios_style_sub">Поведінка прокручування, подібна до iOS, з підвищеним тертям</string>
+    <string name="smooth_curve_sub">Унікальна сплайн-крива для чіткого відчуття прокручування</string>
+    <string name="quick_stop_sub">Точне прокручування зі швидкою зупинкою</string>
+    <string name="bouncy_sub">Грайливий, чуйний пружний сувій</string>
+    <string name="floaty_sub">Довгі ковзаючі прокручування для перегляду вмісту</string>
+    <string name="snappy_sub">Швидке, чутливе прокручування для інтерактивних інтерфейсів користувача</string>
+    <string name="ultra_smooth_sub">Преміум плавне прокручування з розширеним імпульсом</string>
+    <string name="adaptive_sub">Коригує фізику на основі швидкості метання</string>
+    <string name="accessibility_aware_sub">Поважає налаштування доступності системи</string>
+    <string name="reduced_motion_sub">Мінімальний рух для потреб у доступності</string>
 </resources>
