--- a/core/resources/src/main/res/values-vi/strings.xml
+++ b/core/resources/src/main/res/values-vi/strings.xml
@@ -2062,4 +2062,28 @@
     <string name="suffix_pattern_description">Văn bản tùy chỉnh được đặt ở cuối tên tệp, hữu ích cho việc lập phiên bản như _v2, _edited hoặc _final.</string>
     <string name="extension_pattern_description">Phần mở rộng tệp (png, jpg, webp, v.v.), tự động khớp với định dạng đã lưu thực tế.</string>
     <string name="formatted_timestamp_pattern_description">Dấu thời gian có thể tùy chỉnh cho phép bạn xác định định dạng của riêng mình theo đặc tả java để sắp xếp hoàn hảo.</string>
+    <string name="fling_type">Loại ném</string>
+    <string name="android_native">Android gốc</string>
+    <string name="ios_style">Phong cách iOS</string>
+    <string name="smooth_curve">Đường cong mượt mà</string>
+    <string name="quick_stop">Dừng nhanh</string>
+    <string name="bouncy">nảy</string>
+    <string name="floaty">nổi</string>
+    <string name="snappy">nhanh nhẹn</string>
+    <string name="ultra_smooth">siêu mịn</string>
+    <string name="adaptive">Thích ứng</string>
+    <string name="accessibility_aware">Nhận thức về khả năng truy cập</string>
+    <string name="reduced_motion">Giảm chuyển động</string>
+    <string name="android_native_sub">Vật lý cuộn Android gốc</string>
+    <string name="smooth_sub">Cuộn cân bằng, mượt mà để sử dụng chung</string>
+    <string name="ios_style_sub">Hành vi cuộn giống iOS có độ ma sát cao hơn</string>
+    <string name="smooth_curve_sub">Đường cong spline độc ​​đáo cho cảm giác cuộn khác biệt</string>
+    <string name="quick_stop_sub">Cuộn chính xác với tính năng dừng nhanh</string>
+    <string name="bouncy_sub">Cuộn nảy vui tươi, nhạy bén</string>
+    <string name="floaty_sub">Cuộn dài, lướt để duyệt nội dung</string>
+    <string name="snappy_sub">Cuộn nhanh, nhạy cho giao diện người dùng tương tác</string>
+    <string name="ultra_smooth_sub">Cuộn mượt mà cao cấp với động lượng kéo dài</string>
+    <string name="adaptive_sub">Điều chỉnh vật lý dựa trên tốc độ ném</string>
+    <string name="accessibility_aware_sub">Tôn trọng cài đặt khả năng truy cập của hệ thống</string>
+    <string name="reduced_motion_sub">Chuyển động tối thiểu cho nhu cầu tiếp cận</string>
 </resources>
