--- a/core/resources/src/main/res/values-zh-rTW/strings.xml
+++ b/core/resources/src/main/res/values-zh-rTW/strings.xml
@@ -2062,4 +2062,28 @@
     <string name="suffix_pattern_description">放置在文件名末尾的自定义文本，对于 _v2、_edited 或 _final 等版本控制很有用。</string>
     <string name="extension_pattern_description">文件扩展名（png、jpg、webp等），自动匹配实际保存格式。</string>
     <string name="formatted_timestamp_pattern_description">可自定义的时间戳，让您可以通过 java 规范定义自己的格式以实现完美排序。</string>
+    <string name="fling_type" />
+    <string name="android_native" />
+    <string name="ios_style" />
+    <string name="smooth_curve" />
+    <string name="quick_stop">快速停止</string>
+    <string name="bouncy" />
+    <string name="floaty" />
+    <string name="snappy">活泼</string>
+    <string name="ultra_smooth" />
+    <string name="adaptive">自适应</string>
+    <string name="accessibility_aware" />
+    <string name="reduced_motion" />
+    <string name="android_native_sub">原生 Android 滚动物理</string>
+    <string name="smooth_sub">平衡、平滑的滚动，适合一般用途</string>
+    <string name="ios_style_sub">更高的摩擦力，类似 iOS 的滚动行为</string>
+    <string name="smooth_curve_sub">独特的样条曲线带来独特的滚动感觉</string>
+    <string name="quick_stop_sub">精确滚动并快速停止</string>
+    <string name="bouncy_sub">有趣、反应灵敏的弹性滚动</string>
+    <string name="floaty_sub">用于内容浏览的长滑动卷轴</string>
+    <string name="snappy_sub">交互式 UI 的快速、响应式滚动</string>
+    <string name="ultra_smooth_sub">优质平滑滚动，动力强劲</string>
+    <string name="adaptive_sub">根据投掷速度调整物理</string>
+    <string name="accessibility_aware_sub">尊重系统辅助功能设置</string>
+    <string name="reduced_motion_sub">满足无障碍需求的最小运动</string>
 </resources>
