--- a/core/resources/src/main/res/values-pa/strings.xml
+++ b/core/resources/src/main/res/values-pa/strings.xml
@@ -2063,4 +2063,28 @@
     <string name="suffix_pattern_description">ਫਾਈਲ ਨਾਮ ਦੇ ਅੰਤ ਵਿੱਚ ਰੱਖਿਆ ਕਸਟਮ ਟੈਕਸਟ, _v2, _edited, ਜਾਂ _final ਵਰਗੇ ਸੰਸਕਰਣ ਲਈ ਉਪਯੋਗੀ।</string>
     <string name="extension_pattern_description">ਫਾਈਲ ਐਕਸਟੈਂਸ਼ਨ (png, jpg, webp, ਆਦਿ), ਆਪਣੇ ਆਪ ਅਸਲ ਸੁਰੱਖਿਅਤ ਕੀਤੇ ਫਾਰਮੈਟ ਨਾਲ ਮੇਲ ਖਾਂਦੀ ਹੈ।</string>
     <string name="formatted_timestamp_pattern_description">ਇੱਕ ਅਨੁਕੂਲਿਤ ਟਾਈਮਸਟੈਂਪ ਜੋ ਤੁਹਾਨੂੰ ਸੰਪੂਰਨ ਛਾਂਟੀ ਲਈ ਜਾਵਾ ਨਿਰਧਾਰਨ ਦੁਆਰਾ ਆਪਣੇ ਖੁਦ ਦੇ ਫਾਰਮੈਟ ਨੂੰ ਪਰਿਭਾਸ਼ਿਤ ਕਰਨ ਦਿੰਦਾ ਹੈ।</string>
+    <string name="fling_type">ਫਲਿੰਗ ਦੀ ਕਿਸਮ</string>
+    <string name="android_native">Android ਮੂਲ</string>
+    <string name="ios_style">ਆਈਓਐਸ ਸ਼ੈਲੀ</string>
+    <string name="smooth_curve">ਨਿਰਵਿਘਨ ਕਰਵ</string>
+    <string name="quick_stop">ਤੇਜ਼ ਸਟਾਪ</string>
+    <string name="bouncy">ਉਛਾਲ</string>
+    <string name="floaty">ਫਲੋਟੀ</string>
+    <string name="snappy">ਸਨੈਪੀ</string>
+    <string name="ultra_smooth">ਅਤਿ ਨਿਰਵਿਘਨ</string>
+    <string name="adaptive">ਅਨੁਕੂਲ</string>
+    <string name="accessibility_aware">ਪਹੁੰਚਯੋਗਤਾ ਜਾਗਰੂਕ</string>
+    <string name="reduced_motion">ਘਟੀ ਹੋਈ ਗਤੀ</string>
+    <string name="android_native_sub">ਬੇਸਲਾਈਨ ਤੁਲਨਾ ਲਈ ਨੇਟਿਵ ਐਂਡਰਾਇਡ ਸਕ੍ਰੋਲ ਭੌਤਿਕ ਵਿਗਿਆਨ</string>
+    <string name="smooth_sub">ਆਮ ਵਰਤੋਂ ਲਈ ਸੰਤੁਲਿਤ, ਨਿਰਵਿਘਨ ਸਕ੍ਰੋਲਿੰਗ</string>
+    <string name="ios_style_sub">ਉੱਚ ਰਗੜ ਆਈਓਐਸ-ਵਰਗੇ ਸਕ੍ਰੌਲ ਵਿਵਹਾਰ</string>
+    <string name="smooth_curve_sub">ਵੱਖਰੇ ਸਕ੍ਰੌਲ ਮਹਿਸੂਸ ਲਈ ਵਿਲੱਖਣ ਸਪਲਾਈਨ ਕਰਵ</string>
+    <string name="quick_stop_sub">ਤੇਜ਼ ਰੁਕਣ ਦੇ ਨਾਲ ਸਹੀ ਸਕ੍ਰੋਲਿੰਗ</string>
+    <string name="bouncy_sub">ਹੁਸ਼ਿਆਰ, ਜਵਾਬਦੇਹ ਉਛਾਲ ਵਾਲੀ ਸਕ੍ਰੌਲ</string>
+    <string name="floaty_sub">ਸਮੱਗਰੀ ਬ੍ਰਾਊਜ਼ਿੰਗ ਲਈ ਲੰਬੇ, ਗਲਾਈਡਿੰਗ ਸਕ੍ਰੋਲ</string>
+    <string name="snappy_sub">ਇੰਟਰਐਕਟਿਵ UIs ਲਈ ਤੇਜ਼, ਜਵਾਬਦੇਹ ਸਕ੍ਰੋਲਿੰਗ</string>
+    <string name="ultra_smooth_sub">ਵਿਸਤ੍ਰਿਤ ਗਤੀ ਦੇ ਨਾਲ ਪ੍ਰੀਮੀਅਮ ਨਿਰਵਿਘਨ ਸਕ੍ਰੋਲਿੰਗ</string>
+    <string name="adaptive_sub">ਫਲਿੰਗ ਵੇਲੋਸਿਟੀ ਦੇ ਆਧਾਰ \'ਤੇ ਭੌਤਿਕ ਵਿਗਿਆਨ ਨੂੰ ਵਿਵਸਥਿਤ ਕਰਦਾ ਹੈ</string>
+    <string name="accessibility_aware_sub">ਸਿਸਟਮ ਪਹੁੰਚਯੋਗਤਾ ਸੈਟਿੰਗਾਂ ਦਾ ਆਦਰ ਕਰਦਾ ਹੈ</string>
+    <string name="reduced_motion_sub">ਪਹੁੰਚਯੋਗਤਾ ਲੋੜਾਂ ਲਈ ਨਿਊਨਤਮ ਗਤੀ</string>
 </resources>
